@@ -21,7 +21,6 @@ import java.lang.invoke.MethodHandles;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.Deque;
 import java.util.HashMap;
@@ -69,34 +68,37 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
     Set<Node> allNodes = new HashSet<>();
     Set<SolrCollection> allCollections = new HashSet<>();
 
-    Deque<PendingPlacementRequest> pendingRequests = new ArrayDeque<>(requests.size());
+    // This helps us keep track if we have made a full lap of the outstanding requests
+    // without doing a placement or not.
+    int placementCount = 0;
+    Deque<OutstandingPlacementRequest> outstandingRequests = new ArrayDeque<>(requests.size());
     for (PlacementRequest request : requests) {
-      PendingPlacementRequest pending = new PendingPlacementRequest(request);
-      pendingRequests.add(pending);
+      OutstandingPlacementRequest outstanding = new OutstandingPlacementRequest(request);
+      outstandingRequests.add(outstanding);
       placementPlans.add(
           placementContext
               .getPlacementPlanFactory()
-              .createPlacementPlan(request, pending.getComputedPlacementSet()));
+              .createPlacementPlan(request, outstanding.getComputedPlacementSet()));
       allNodes.addAll(request.getTargetNodes());
       allCollections.add(request.getCollection());
     }
 
     Collection<WeightedNode> weightedNodes =
         getWeightedNodes(placementContext, allNodes, allCollections, true).values();
-    while (!pendingRequests.isEmpty()) {
-      PendingPlacementRequest request = pendingRequests.poll();
-      if (!request.isPending()) {
+    while (!outstandingRequests.isEmpty()) {
+      OutstandingPlacementRequest request = outstandingRequests.poll();
+      if (request.isComplete()) {
         continue;
       }
 
       List<WeightedNode> nodesForRequest =
-          weightedNodes.stream().filter(request::isTargetingNode).collect(Collectors.toList());
+          weightedNodes.stream().filter(request::isTargetingNode).toList();
 
       SolrCollection solrCollection = request.getCollection();
       // Now place all replicas of all shards on available nodes
-      for (String shardName : request.getPendingShards()) {
-        for (Replica.ReplicaType replicaType : request.getPendingReplicaTypes(shardName)) {
-          int replicaCount = request.getPendingReplicas(shardName, replicaType);
+      for (String shardName : request.getOutstandingShards()) {
+        for (Replica.ReplicaType replicaType : request.getOutstandingReplicaTypes(shardName)) {
+          int replicaCount = request.getOutstandingReplicas(shardName, replicaType);
           if (log.isDebugEnabled()) {
             log.debug(
                 "Placing {} replicas for Collection: {}, Shard: {}, ReplicaType: {}",
@@ -131,12 +133,13 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
             // options than we have replicas to place, that's ok, because the replicas will likely
             // be put on all the tie options.
             //
-            // Only skip the request if it can be requeued, and there are other pending requests to
-            // compute.
+            // Only skip the request if it can be requeued, and there are other outstanding requests
+            // to
+            // compute. If the next outstanding request cannot be requeued,
             int numWeightTies = nodesForReplicaType.peekTies();
-            if (!pendingRequests.isEmpty()
-                && request.canBeRequeued()
-                && numWeightTies > (replicaCount - replicasPlaced)) {
+            if (numWeightTies > (replicaCount - replicasPlaced)
+                && !outstandingRequests.isEmpty()
+                && request.canBeRequeued(placementCount)) {
               log.debug(
                   "There is a tie for best weight. There are more options ({}) than replicas to place ({}), so try this placement request later: {}",
                   numWeightTies,
@@ -151,6 +154,7 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
                 node.addReplica(
                     createProjectedReplica(solrCollection, shardName, replicaType, node.getNode()));
             replicasPlaced += 1;
+            placementCount += 1;
             request.addPlacement(
                 placementContext
                     .getPlacementPlanFactory()
@@ -185,9 +189,9 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
           }
         }
       }
-      if (request.isPending()) {
-        request.requeue();
-        pendingRequests.add(request);
+      if (!request.isComplete()) {
+        request.requeue(placementCount);
+        outstandingRequests.add(request);
       }
     }
     return placementPlans;
@@ -236,7 +240,7 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
         List<Replica> availableReplicasToMove =
             highestWeight.getAllReplicasOnNode().stream()
                 .sorted(Comparator.comparing(Replica::getReplicaName))
-                .collect(Collectors.toList());
+                .toList();
         int combinedNodeWeights = highestWeight.calcWeight() + lowestWeight.calcWeight();
         for (Replica r : availableReplicasToMove) {
           // Only continue if the replica can be removed from the old node and moved to the new node
@@ -279,7 +283,7 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
           break;
         }
       }
-      // For now we do not have any way to see if there are out-of-date notes in the middle of the
+      // For now, we do not have any way to see if there are out-of-date nodes in the middle of the
       // TreeSet. Therefore, we need to re-sort this list after every selection. In the future, we
       // should find a way to re-sort the out-of-date nodes without having to sort all nodes.
       traversedHighNodes.addAll(orderedNodes);
@@ -434,19 +438,13 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
     }
 
     public Set<String> getShardsOnNode(String collection) {
-      return replicas.getOrDefault(collection, Collections.emptyMap()).keySet();
-    }
-
-    public boolean hasShardOnNode(Shard shard) {
-      return replicas
-          .getOrDefault(shard.getCollection().getName(), Collections.emptyMap())
-          .containsKey(shard.getShardName());
+      return replicas.getOrDefault(collection, Map.of()).keySet();
     }
 
     public Set<Replica> getReplicasForShardOnNode(Shard shard) {
       return Optional.ofNullable(replicas.get(shard.getCollection().getName()))
           .map(m -> m.get(shard.getShardName()))
-          .orElseGet(Collections::emptySet);
+          .orElseGet(Set::of);
     }
 
     public abstract int calcWeight();
@@ -500,7 +498,7 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
      *     removed.
      */
     public Map<Replica, String> canRemoveReplicas(Collection<Replica> replicas) {
-      return Collections.emptyMap();
+      return Map.of();
     }
 
     public final void removeReplica(Replica replica) {
@@ -550,10 +548,9 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
 
     @Override
     public boolean equals(Object o) {
-      if (!(o instanceof WeightedNode)) {
+      if (!(o instanceof WeightedNode on)) {
         return false;
       } else {
-        WeightedNode on = (WeightedNode) o;
         if (this.node == null) {
           return on.node == null;
         } else {
@@ -772,15 +769,6 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
     }
 
     /**
-     * Get the number of nodes in the heap.
-     *
-     * @return number of nodes
-     */
-    public int size() {
-      return size;
-    }
-
-    /**
      * Check if the heap is empty.
      *
      * @return if the heap has no nodes
@@ -808,8 +796,8 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
   }
 
   /** Context for a placement request still has replicas that need to be placed. */
-  static class PendingPlacementRequest {
-    boolean hasBeenRequeued;
+  static class OutstandingPlacementRequest {
+    int requeuedAtPlacementCount;
 
     final SolrCollection collection;
 
@@ -821,8 +809,8 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
     // A live view on how many replicas still need to be placed for each shard & replica type
     final Map<String, Map<Replica.ReplicaType, Integer>> replicasToPlaceForShards;
 
-    public PendingPlacementRequest(PlacementRequest request) {
-      hasBeenRequeued = false;
+    public OutstandingPlacementRequest(PlacementRequest request) {
+      requeuedAtPlacementCount = -1;
       collection = request.getCollection();
       targetNodes = request.getTargetNodes();
       Set<String> shards = request.getShardNames();
@@ -843,13 +831,13 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
     }
 
     /**
-     * Determine if this request is not yet complete, and there are requested replicas that have not
+     * Determine if this request is complete, and there are no requested replicas that have not yet
      * had placements computed.
      *
-     * @return if there are still replica placements that need to be computed
+     * @return if all replica placements have been computed
      */
-    public boolean isPending() {
-      return !replicasToPlaceForShards.isEmpty();
+    public boolean isComplete() {
+      return replicasToPlaceForShards.isEmpty();
     }
 
     public SolrCollection getCollection() {
@@ -864,7 +852,7 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
      * The set of ReplicaPlacements computed for this request.
      *
      * <p>The list that is returned is the same list used internally, so it will be augmented until
-     * {@link #isPending()} returns false.
+     * {@link #isComplete()} returns true.
      *
      * @return The live set of replicaPlacements for this request.
      */
@@ -879,7 +867,7 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
      *
      * @return list of unfinished shards
      */
-    public Collection<String> getPendingShards() {
+    public Collection<String> getOutstandingShards() {
       return new ArrayList<>(replicasToPlaceForShards.keySet());
     }
 
@@ -890,12 +878,12 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
      * @param shard name of the shard to check for uncomputed placements
      * @return the set of unfinished replica types
      */
-    public Collection<Replica.ReplicaType> getPendingReplicaTypes(String shard) {
+    public Collection<Replica.ReplicaType> getOutstandingReplicaTypes(String shard) {
       return Optional.ofNullable(replicasToPlaceForShards.get(shard))
           .map(Map::keySet)
           // Use a sorted TreeSet to make sure that tests are repeatable
           .<Collection<Replica.ReplicaType>>map(TreeSet::new)
-          .orElseGet(Collections::emptyList);
+          .orElseGet(List::of);
     }
 
     /**
@@ -906,30 +894,36 @@ public abstract class OrderedNodePlacementPlugin implements PlacementPlugin {
      * @param type type of replica to be placed
      * @return the number of replicas that have not yet had placements computed
      */
-    public int getPendingReplicas(String shard, Replica.ReplicaType type) {
+    public int getOutstandingReplicas(String shard, Replica.ReplicaType type) {
       return Optional.ofNullable(replicasToPlaceForShards.get(shard))
           .map(m -> m.get(type))
           .orElse(0);
     }
 
     /**
-     * Currently, only of requeue is allowed per pending request.
+     * The request can be requeued as long as there have been placements since the last time it was
+     * requeued. If no placements have been made since, we will not allow a requeue which will force
+     * placements to be determined. This removes the possibility of a never-ending loop.
      *
      * @return true if the request has not been requeued already
      */
-    public boolean canBeRequeued() {
-      return !hasBeenRequeued;
-    }
-
-    /** Let the pending request know that it has been requeued */
-    public void requeue() {
-      hasBeenRequeued = true;
+    public boolean canBeRequeued(int placementCount) {
+      return requeuedAtPlacementCount < placementCount;
     }
 
     /**
-     * Track the given replica placement for this pending request.
+     * Let the request know that it has been requeued
      *
-     * @param replica placement that has been made for the pending request
+     * @param placementCount the number of placements made at the time of the requeue
+     */
+    public void requeue(int placementCount) {
+      requeuedAtPlacementCount = placementCount;
+    }
+
+    /**
+     * Track the given replica placement for this request.
+     *
+     * @param replica placement that has been made for the request
      */
     public void addPlacement(ReplicaPlacement replica) {
       computedPlacements.add(replica);
