@@ -17,11 +17,9 @@
 
 package org.apache.solr.core;
 
-import java.io.File;
 import java.lang.invoke.MethodHandles;
+import java.nio.file.FileSystems;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import org.apache.commons.exec.OS;
@@ -34,17 +32,17 @@ public final class SolrPaths {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   /** Special path which means to accept all paths. */
-  public static final Path ALL_PATH = Paths.get("_ALL_");
+  public static final Path ALL_PATH = Path.of("_ALL_");
 
   /** Special singleton path set containing only {@link #ALL_PATH}. */
-  private static final Set<Path> ALL_PATHS = Collections.singleton(ALL_PATH);
+  private static final Set<Path> ALL_PATHS = Set.of(ALL_PATH);
 
   private SolrPaths() {} // don't create this
 
   /** Ensures a directory name always ends with a '/'. */
   public static String normalizeDir(String path) {
     return (path != null && (!(path.endsWith("/") || path.endsWith("\\"))))
-        ? path + File.separator
+        ? path + FileSystems.getDefault().getSeparator()
         : path;
   }
 
@@ -79,7 +77,7 @@ public final class SolrPaths {
           SolrException.ErrorCode.BAD_REQUEST,
           "Path "
               + path
-              + " must be relative to SOLR_HOME, SOLR_DATA_HOME coreRootDirectory. Set system property 'solr.allowPaths' to add other allowed paths.");
+              + " must be relative to SOLR_HOME, SOLR_DATA_HOME coreRootDirectory. Set system property 'solr.security.allow.paths' to add other allowed paths.");
     }
   }
 
@@ -116,7 +114,7 @@ public final class SolrPaths {
       if (path.equals(WILDCARD_PATH)) {
         paths = ALL_PATHS;
       } else {
-        addPath(Paths.get(path));
+        addPath(Path.of(path));
       }
       return this;
     }
@@ -126,6 +124,10 @@ public final class SolrPaths {
      * (not supported as a {@link Path} on Windows), see {@link #addPath(String)}.
      */
     public AllowPathBuilder addPath(Path path) {
+      if (path == null) {
+        return this;
+      }
+
       if (paths != ALL_PATHS) {
         if (path.equals(ALL_PATH)) {
           paths = ALL_PATHS;
@@ -140,7 +142,7 @@ public final class SolrPaths {
     }
 
     public Set<Path> build() {
-      return paths == null ? Collections.emptySet() : paths;
+      return paths == null ? Set.of() : paths;
     }
   }
 }
