@@ -19,29 +19,24 @@ package org.apache.solr.handler;
 import static org.apache.solr.common.params.CommonParams.JAVABIN;
 import static org.apache.solr.common.params.CommonParams.NAME;
 import static org.apache.solr.handler.ReplicationHandler.ALIAS;
-import static org.apache.solr.handler.ReplicationHandler.CHECKSUM;
 import static org.apache.solr.handler.ReplicationHandler.CMD_DETAILS;
 import static org.apache.solr.handler.ReplicationHandler.CMD_GET_FILE;
 import static org.apache.solr.handler.ReplicationHandler.CMD_GET_FILE_LIST;
 import static org.apache.solr.handler.ReplicationHandler.CMD_INDEX_VERSION;
 import static org.apache.solr.handler.ReplicationHandler.COMMAND;
-import static org.apache.solr.handler.ReplicationHandler.COMPRESSION;
 import static org.apache.solr.handler.ReplicationHandler.CONF_FILES;
-import static org.apache.solr.handler.ReplicationHandler.CONF_FILE_SHORT;
-import static org.apache.solr.handler.ReplicationHandler.EXTERNAL;
 import static org.apache.solr.handler.ReplicationHandler.FETCH_FROM_LEADER;
-import static org.apache.solr.handler.ReplicationHandler.FILE;
-import static org.apache.solr.handler.ReplicationHandler.FILE_STREAM;
-import static org.apache.solr.handler.ReplicationHandler.GENERATION;
-import static org.apache.solr.handler.ReplicationHandler.INTERNAL;
 import static org.apache.solr.handler.ReplicationHandler.LEADER_URL;
-import static org.apache.solr.handler.ReplicationHandler.LEGACY_LEADER_URL;
-import static org.apache.solr.handler.ReplicationHandler.LEGACY_SKIP_COMMIT_ON_LEADER_VERSION_ZERO;
-import static org.apache.solr.handler.ReplicationHandler.OFFSET;
 import static org.apache.solr.handler.ReplicationHandler.SIZE;
 import static org.apache.solr.handler.ReplicationHandler.SKIP_COMMIT_ON_LEADER_VERSION_ZERO;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.CHECKSUM;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.COMPRESSION;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.CONF_FILE_SHORT;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.FILE;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.FILE_STREAM;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.GENERATION;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.OFFSET;
 
-import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -54,12 +49,9 @@ import java.net.MalformedURLException;
 import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileStore;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -79,28 +71,28 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.function.BooleanSupplier;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.zip.Adler32;
 import java.util.zip.Checksum;
 import java.util.zip.InflaterInputStream;
-import org.apache.http.client.HttpClient;
 import org.apache.lucene.codecs.CodecUtil;
 import org.apache.lucene.index.IndexCommit;
 import org.apache.lucene.index.IndexWriter;
 import org.apache.lucene.index.SegmentInfos;
+import org.apache.lucene.store.AlreadyClosedException;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.FSDirectory;
 import org.apache.lucene.store.FilterDirectory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
 import org.apache.lucene.store.IndexOutput;
-import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.api.model.FileMetaData;
+import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpClientUtil;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient.Builder;
-import org.apache.solr.client.solrj.request.QueryRequest;
+import org.apache.solr.client.solrj.impl.SolrHttpConstants;
+import org.apache.solr.client.solrj.jetty.HttpJettySolrClient;
+import org.apache.solr.client.solrj.request.GenericSolrRequest;
+import org.apache.solr.client.solrj.response.InputStreamResponseParser;
 import org.apache.solr.cloud.CloudDescriptor;
 import org.apache.solr.cloud.ZkController;
 import org.apache.solr.common.SolrException;
@@ -109,6 +101,7 @@ import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
+import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.FastInputStream;
 import org.apache.solr.common.util.IOUtils;
@@ -116,23 +109,22 @@ import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.SuppressForbidden;
+import org.apache.solr.common.util.URLUtil;
 import org.apache.solr.core.DirectoryFactory;
 import org.apache.solr.core.DirectoryFactory.DirContext;
 import org.apache.solr.core.IndexDeletionPolicyWrapper;
 import org.apache.solr.core.SolrCore;
-import org.apache.solr.handler.ReplicationHandler.FileInfo;
-import org.apache.solr.handler.admin.api.CoreReplicationAPI;
-import org.apache.solr.request.LocalSolrQueryRequest;
+import org.apache.solr.handler.admin.api.ReplicationAPIBase;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.security.AllowListUrlChecker;
 import org.apache.solr.update.CommitUpdateCommand;
-import org.apache.solr.util.FileUtils;
-import org.apache.solr.util.PropertiesOutputStream;
+import org.apache.solr.update.UpdateShardHandler;
+import org.apache.solr.util.IndexOutputOutputStream;
 import org.apache.solr.util.RTimer;
 import org.apache.solr.util.RefCounted;
 import org.apache.solr.util.TestInjection;
-import org.apache.solr.util.stats.InstrumentedHttpRequestExecutor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -149,7 +141,10 @@ public class IndexFetcher {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  private String leaderUrl;
+  private String leaderCoreUrl;
+  // Derived from 'leaderCoreUrl' but kept around to avoid recomputing
+  private String leaderBaseUrl;
+  private String leaderCoreName;
 
   final ReplicationHandler replicationHandler;
 
@@ -182,17 +177,11 @@ public class IndexFetcher {
 
   boolean fetchFromLeader = false;
 
-  private final HttpClient myHttpClient;
-
-  private Integer connTimeout;
+  private final HttpJettySolrClient solrClient;
 
   private Integer soTimeout;
 
-  private boolean downloadTlogFiles = false;
-
   private boolean skipCommitOnLeaderVersionZero = true;
-
-  private boolean clearLocalIndexFirst = false;
 
   private static final String INTERRUPT_RESPONSE_MESSAGE =
       "Interrupted while waiting for modify lock";
@@ -210,7 +199,7 @@ public class IndexFetcher {
         new IndexFetchResult("Local index commit is already in sync with peer", true, null);
 
     public static final IndexFetchResult INDEX_FETCH_FAILURE =
-        new IndexFetchResult("Fetching lastest index is failed", false, null);
+        new IndexFetchResult("Fetching latest index is failed", false, null);
     public static final IndexFetchResult INDEX_FETCH_SUCCESS =
         new IndexFetchResult("Fetching latest index is successful", true, null);
     public static final IndexFetchResult LOCK_OBTAIN_FAILED =
@@ -225,8 +214,6 @@ public class IndexFetcher {
     public static final IndexFetchResult PEER_INDEX_COMMIT_DELETED =
         new IndexFetchResult(
             "No files to download because IndexCommit in peer was deleted", false, null);
-    public static final IndexFetchResult LOCAL_ACTIVITY_DURING_REPLICATION =
-        new IndexFetchResult("Local index modification during replication", false, null);
     public static final IndexFetchResult EXPECTING_NON_LEADER =
         new IndexFetchResult("Replicating from leader but I'm the shard leader", false, null);
     public static final IndexFetchResult LEADER_IS_NOT_ACTIVE =
@@ -257,22 +244,17 @@ public class IndexFetcher {
     }
   }
 
-  private static HttpClient createHttpClient(
-      SolrCore core,
-      String httpBasicAuthUser,
-      String httpBasicAuthPassword,
-      boolean useCompression) {
-    final ModifiableSolrParams httpClientParams = new ModifiableSolrParams();
-    httpClientParams.set(HttpClientUtil.PROP_BASIC_AUTH_USER, httpBasicAuthUser);
-    httpClientParams.set(HttpClientUtil.PROP_BASIC_AUTH_PASS, httpBasicAuthPassword);
-    httpClientParams.set(HttpClientUtil.PROP_ALLOW_COMPRESSION, useCompression);
-    // no metrics, just tracing
-    InstrumentedHttpRequestExecutor executor = new InstrumentedHttpRequestExecutor(null);
-    return HttpClientUtil.createClient(
-        httpClientParams,
-        core.getCoreContainer().getUpdateShardHandler().getRecoveryOnlyConnectionManager(),
-        true,
-        executor);
+  // It's crucial not to remove the authentication credentials as they are essential for User
+  // managed replication.
+  // GitHub PR #2276
+  private HttpJettySolrClient createSolrClient(
+      SolrCore core, String httpBasicAuthUser, String httpBasicAuthPassword, String leaderBaseUrl) {
+    final UpdateShardHandler updateShardHandler = core.getCoreContainer().getUpdateShardHandler();
+    return new HttpJettySolrClient.Builder(leaderBaseUrl)
+        .withHttpClient(updateShardHandler.getRecoveryOnlyHttpClient())
+        .withBasicAuthCredentials(httpBasicAuthUser, httpBasicAuthPassword)
+        .withIdleTimeout(soTimeout, TimeUnit.MILLISECONDS)
+        .build();
   }
 
   public IndexFetcher(
@@ -282,17 +264,11 @@ public class IndexFetcher {
     if (fetchFromLeader != null && fetchFromLeader instanceof Boolean) {
       this.fetchFromLeader = (boolean) fetchFromLeader;
     }
-    Object skipCommitOnLeaderVersionZero =
-        ReplicationHandler.getObjectWithBackwardCompatibility(
-            initArgs,
-            SKIP_COMMIT_ON_LEADER_VERSION_ZERO,
-            LEGACY_SKIP_COMMIT_ON_LEADER_VERSION_ZERO);
+    Object skipCommitOnLeaderVersionZero = initArgs.get(SKIP_COMMIT_ON_LEADER_VERSION_ZERO);
     if (skipCommitOnLeaderVersionZero != null && skipCommitOnLeaderVersionZero instanceof Boolean) {
       this.skipCommitOnLeaderVersionZero = (boolean) skipCommitOnLeaderVersionZero;
     }
-    String leaderUrl =
-        ReplicationHandler.getObjectWithBackwardCompatibility(
-            initArgs, LEADER_URL, LEGACY_LEADER_URL);
+    String leaderUrl = (String) initArgs.get(LEADER_URL);
     if (leaderUrl == null && !this.fetchFromLeader)
       throw new SolrException(
           SolrException.ErrorCode.SERVER_ERROR, "'leaderUrl' is required for a follower");
@@ -300,30 +276,23 @@ public class IndexFetcher {
       leaderUrl = leaderUrl.substring(0, leaderUrl.length() - 12);
       log.warn("'leaderUrl' must be specified without the {} suffix", ReplicationHandler.PATH);
     }
-    setLeaderUrl(leaderUrl);
+    setLeaderCoreUrl(leaderUrl);
 
     this.replicationHandler = handler;
     String compress = (String) initArgs.get(COMPRESSION);
-    useInternalCompression = INTERNAL.equals(compress);
-    useExternalCompression = EXTERNAL.equals(compress);
-    connTimeout = getParameter(initArgs, HttpClientUtil.PROP_CONNECTION_TIMEOUT, 30000, null);
+    useInternalCompression = ReplicationHandler.INTERNAL.equals(compress);
+    useExternalCompression = ReplicationHandler.EXTERNAL.equals(compress);
+    soTimeout = getParameter(initArgs, SolrHttpConstants.PROP_SO_TIMEOUT, 120000, null);
 
-    // allow a leader override for tests - you specify this in /replication follower section of
-    // solrconfig and some test don't want to define this
-    soTimeout = Integer.getInteger("solr.indexfetcher.sotimeout", -1);
-    if (soTimeout == -1) {
-      soTimeout = getParameter(initArgs, HttpClientUtil.PROP_SO_TIMEOUT, 120000, null);
-    }
-
-    String httpBasicAuthUser = (String) initArgs.get(HttpClientUtil.PROP_BASIC_AUTH_USER);
-    String httpBasicAuthPassword = (String) initArgs.get(HttpClientUtil.PROP_BASIC_AUTH_PASS);
-    myHttpClient =
-        createHttpClient(
-            solrCore, httpBasicAuthUser, httpBasicAuthPassword, useExternalCompression);
+    String httpBasicAuthUser = (String) initArgs.get(SolrHttpConstants.PROP_BASIC_AUTH_USER);
+    String httpBasicAuthPassword = (String) initArgs.get(SolrHttpConstants.PROP_BASIC_AUTH_PASS);
+    solrClient =
+        createSolrClient(solrCore, httpBasicAuthUser, httpBasicAuthPassword, leaderBaseUrl);
   }
 
-  private void setLeaderUrl(String leaderUrl) {
-    if (leaderUrl != null) {
+  private void setLeaderCoreUrl(String leaderCoreUrl) {
+    if (leaderCoreUrl != null) {
+      leaderCoreUrl = leaderCoreUrl.trim();
       ClusterState clusterState =
           solrCore.getCoreContainer().getZkController() == null
               ? null
@@ -332,24 +301,28 @@ public class IndexFetcher {
         solrCore
             .getCoreContainer()
             .getAllowListUrlChecker()
-            .checkAllowList(Collections.singletonList(leaderUrl), clusterState);
+            .checkAllowList(List.of(leaderCoreUrl), clusterState);
       } catch (MalformedURLException e) {
         throw new SolrException(
-            SolrException.ErrorCode.SERVER_ERROR, "Malformed 'leaderUrl' " + leaderUrl, e);
+            SolrException.ErrorCode.SERVER_ERROR, "Malformed 'leaderUrl' " + leaderCoreUrl, e);
       } catch (SolrException e) {
         throw new SolrException(
             SolrException.ErrorCode.FORBIDDEN,
             "The '"
                 + LEADER_URL
                 + "' parameter value '"
-                + leaderUrl
+                + leaderCoreUrl
                 + "' is not allowed: "
                 + e.getMessage()
                 + ". "
                 + AllowListUrlChecker.SET_SOLR_DISABLE_URL_ALLOW_LIST_CLUE);
       }
     }
-    this.leaderUrl = leaderUrl;
+    this.leaderCoreUrl = leaderCoreUrl;
+    if (leaderCoreUrl != null) {
+      this.leaderBaseUrl = URLUtil.extractBaseUrl(leaderCoreUrl);
+      this.leaderCoreName = URLUtil.extractCoreFromCoreUrl(leaderCoreUrl);
+    }
   }
 
   protected <T> T getParameter(
@@ -365,23 +338,23 @@ public class IndexFetcher {
     return toReturn;
   }
 
+  private GenericSolrRequest createReplicationHandlerRequest(SolrParams solrParams) {
+    return new GenericSolrRequest(
+            SolrRequest.METHOD.GET,
+            ReplicationHandler.PATH,
+            SolrRequest.SolrRequestType.ADMIN,
+            solrParams)
+        .setRequiresCollection(true);
+  }
+
   /** Gets the latest commit version and generation from the leader */
   public NamedList<Object> getLatestVersion() throws IOException {
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.set(COMMAND, CMD_INDEX_VERSION);
     params.set(CommonParams.WT, JAVABIN);
-    params.set(CommonParams.QT, ReplicationHandler.PATH);
-    QueryRequest req = new QueryRequest(params);
-
-    // TODO modify to use shardhandler
-    try (SolrClient client =
-        new Builder(leaderUrl)
-            .withHttpClient(myHttpClient)
-            .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
-            .build()) {
-
-      return client.request(req);
+    var req = createReplicationHandlerRequest(params);
+    try {
+      return solrClient.requestWithBaseUrl(leaderBaseUrl, req, leaderCoreName);
     } catch (SolrServerException e) {
       throw new SolrException(ErrorCode.SERVER_ERROR, e.getMessage(), e);
     }
@@ -397,22 +370,14 @@ public class IndexFetcher {
     params.set(COMMAND, CMD_GET_FILE_LIST);
     params.set(GENERATION, String.valueOf(gen));
     params.set(CommonParams.WT, JAVABIN);
-    params.set(CommonParams.QT, ReplicationHandler.PATH);
-    QueryRequest req = new QueryRequest(params);
-
-    // TODO modify to use shardhandler
-    try (SolrClient client =
-        new HttpSolrClient.Builder(leaderUrl)
-            .withHttpClient(myHttpClient)
-            .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
-            .build()) {
-      NamedList<?> response = client.request(req);
+    var req = createReplicationHandlerRequest(params);
+    try {
+      NamedList<?> response = solrClient.requestWithBaseUrl(leaderBaseUrl, req, leaderCoreName);
 
       List<Map<String, Object>> files = (List<Map<String, Object>>) response.get(CMD_GET_FILE_LIST);
       if (files != null) filesToDownload = Collections.synchronizedList(files);
       else {
-        filesToDownload = Collections.emptyList();
+        filesToDownload = List.of();
         log.error("No files to download for index generation: {}", gen);
       }
 
@@ -429,7 +394,7 @@ public class IndexFetcher {
   }
 
   /**
-   * This command downloads all the necessary files from leader to install a index commit point.
+   * This command downloads all the necessary files from leader to install an index commit point.
    * Only changed files are downloaded. It also downloads the conf files (if they are modified).
    *
    * @param forceReplication force a replication in all cases
@@ -440,7 +405,6 @@ public class IndexFetcher {
   IndexFetchResult fetchLatestIndex(boolean forceReplication, boolean forceCoreReload)
       throws IOException, InterruptedException {
 
-    this.clearLocalIndexFirst = false;
     boolean cleanupDone = false;
     boolean successfulInstall = false;
     markReplicationStart();
@@ -449,7 +413,7 @@ public class IndexFetcher {
     Directory indexDir = null;
     String indexDirPath;
     boolean deleteTmpIdxDir = true;
-    File tmpTlogDir = null;
+    Path tmpTlogDir = null;
 
     if (!solrCore.getSolrCoreState().getLastReplicateIndexSuccess()) {
       // if the last replication was not a success, we force a full replication
@@ -488,9 +452,9 @@ public class IndexFetcher {
           }
           return IndexFetchResult.LEADER_IS_NOT_ACTIVE;
         }
-        if (!replica.getCoreUrl().equals(leaderUrl)) {
-          setLeaderUrl(replica.getCoreUrl());
-          log.info("Updated leaderUrl to {}", leaderUrl);
+        if (!replica.getCoreUrl().equals(leaderCoreUrl)) {
+          setLeaderCoreUrl(replica.getCoreUrl());
+          log.info("Updated leaderUrl to {}", leaderCoreUrl);
           // TODO: Do we need to set forceReplication = true?
         } else {
           log.debug("leaderUrl didn't change");
@@ -505,13 +469,13 @@ public class IndexFetcher {
         if (StrUtils.isNotNullOrEmpty(errorMsg) && errorMsg.contains(INTERRUPT_RESPONSE_MESSAGE)) {
           log.warn(
               "Leader at: {} is not available. Index fetch failed by interrupt. Exception: {}",
-              leaderUrl,
+              leaderCoreUrl,
               errorMsg);
           return new IndexFetchResult(IndexFetchResult.FAILED_BY_INTERRUPT_MESSAGE, false, e);
         } else {
           log.warn(
               "Leader at: {} is not available. Index fetch failed by exception: {}",
-              leaderUrl,
+              leaderCoreUrl,
               errorMsg);
           return new IndexFetchResult(IndexFetchResult.FAILED_BY_EXCEPTION_MESSAGE, false, e);
         }
@@ -544,9 +508,13 @@ public class IndexFetcher {
 
       if (log.isInfoEnabled()) {
         log.info("Follower's generation: {}", commit.getGeneration());
-        log.info(
-            "Follower's version: {}",
-            IndexDeletionPolicyWrapper.getCommitTimestamp(commit)); // nowarn
+        log.info("Follower's version: {}", IndexDeletionPolicyWrapper.getCommitTimestamp(commit));
+      }
+
+      // Leader's version is 0 and generation is 0 -  not open for replication
+      if (latestVersion == 0L && latestGeneration == 0L) {
+        log.info("Leader's version is 0 and generation is 0 -  not open for replication");
+        return IndexFetchResult.LEADER_IS_NOT_ACTIVE;
       }
 
       if (latestVersion == 0L) {
@@ -555,17 +523,17 @@ public class IndexFetcher {
           // we just clear ours and commit
           log.info("New index in Leader. Deleting mine...");
           RefCounted<IndexWriter> iw =
-              solrCore.getUpdateHandler().getSolrCoreState().getIndexWriter(solrCore);
+              solrCore.getUpdateHandler().getSolrCoreState().getIndexWriter(solrCore, false);
           try {
             iw.get().deleteAll();
           } finally {
             iw.decref();
           }
           assert TestInjection.injectDelayBeforeFollowerCommitRefresh();
-          if (skipCommitOnLeaderVersionZero) {
+          if (skipCommitOnLeaderVersionZero || solrCore.readOnly) {
             openNewSearcherAndUpdateCommitPoint();
           } else {
-            SolrQueryRequest req = new LocalSolrQueryRequest(solrCore, new ModifiableSolrParams());
+            SolrQueryRequest req = new SolrQueryRequestBase(solrCore, new ModifiableSolrParams());
             solrCore.getUpdateHandler().commit(new CommitUpdateCommand(req, false));
           }
         }
@@ -649,7 +617,7 @@ public class IndexFetcher {
           // are successfully deleted
           solrCore.getUpdateHandler().newIndexWriter(true);
           RefCounted<IndexWriter> writer =
-              solrCore.getUpdateHandler().getSolrCoreState().getIndexWriter(null);
+              solrCore.getUpdateHandler().getSolrCoreState().getIndexWriter(null, false);
           try {
             IndexWriter indexWriter = writer.get();
             int c = 0;
@@ -697,7 +665,7 @@ public class IndexFetcher {
                   latestGeneration);
           final long timeTakenSeconds = getReplicationTimeElapsed();
           final Long bytesDownloadedPerSecond =
-              (timeTakenSeconds != 0 ? Long.valueOf(bytesDownloaded / timeTakenSeconds) : null);
+              (timeTakenSeconds != 0 ? bytesDownloaded / timeTakenSeconds : null);
           log.info(
               "Total time taken for download (fullCopy={},bytesDownloaded={}) : {} secs ({} bytes/sec) to {}",
               isFullCopyNeeded,
@@ -722,9 +690,7 @@ public class IndexFetcher {
                 // let the system know we are changing dir's and the old one
                 // may be closed
                 if (indexDir != null) {
-                  if (!this.clearLocalIndexFirst) { // it was closed earlier
-                    solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
-                  }
+                  solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
                   // Cleanup all index files not associated with any *named* snapshot.
                   solrCore.deleteNonSnapshotIndexFiles(indexDirPath);
                 }
@@ -747,8 +713,6 @@ public class IndexFetcher {
             }
           }
         } finally {
-          solrCore.searchEnabled = true;
-          solrCore.indexEnabled = true;
           if (!isFullCopyNeeded) {
             solrCore.getUpdateHandler().getSolrCoreState().openIndexWriter(solrCore);
           }
@@ -824,7 +788,7 @@ public class IndexFetcher {
       Directory tmpIndexDir,
       Directory indexDir,
       boolean deleteTmpIdxDir,
-      File tmpTlogDir,
+      Path tmpTlogDir,
       boolean successfulInstall)
       throws IOException {
     try {
@@ -874,7 +838,9 @@ public class IndexFetcher {
           log.error("Error releasing indexDir", e);
         }
         try {
-          if (tmpTlogDir != null) delTree(tmpTlogDir);
+          if (tmpTlogDir != null) {
+            delTree(tmpTlogDir);
+          }
         } catch (Exception e) {
           log.error("Error deleting tmpTlogDir", e);
         }
@@ -950,9 +916,6 @@ public class IndexFetcher {
       props.setProperty(INDEX_REPLICATED_AT, String.valueOf(replicationTime));
       props.setProperty(PREVIOUS_CYCLE_TIME_TAKEN, String.valueOf(replicationTimeTaken));
       props.setProperty(TIMES_INDEX_REPLICATED, String.valueOf(indexCount));
-      if (clearLocalIndexFirst) {
-        props.setProperty(CLEARED_LOCAL_IDX, "true");
-      }
       if (modifiedConfFiles != null && !modifiedConfFiles.isEmpty()) {
         props.setProperty(CONF_FILES_REPLICATED, confFiles.toString());
         props.setProperty(CONF_FILES_REPLICATED_AT, String.valueOf(replicationTime));
@@ -977,9 +940,9 @@ public class IndexFetcher {
       String tmpFileName = REPLICATION_PROPERTIES + "." + System.nanoTime();
       final IndexOutput out = dir.createOutput(tmpFileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
       try (Writer outFile =
-          new OutputStreamWriter(new PropertiesOutputStream(out), StandardCharsets.UTF_8)) {
+          new OutputStreamWriter(new IndexOutputOutputStream(out), StandardCharsets.UTF_8)) {
         props.store(outFile, "Replication details");
-        dir.sync(Collections.singleton(tmpFileName));
+        dir.sync(Set.of(tmpFileName));
       }
 
       solrCore.getDirectoryFactory().renameWithOverwrite(dir, tmpFileName, REPLICATION_PROPERTIES);
@@ -1041,8 +1004,7 @@ public class IndexFetcher {
       if (core == null) {
         return; // core closed, presumably
       }
-      @SuppressWarnings("unchecked")
-      Future<Void>[] waitSearcher = (Future<Void>[]) Array.newInstance(Future.class, 1);
+      Future<?>[] waitSearcher = (Future<?>[]) Array.newInstance(Future.class, 1);
       RefCounted<SolrIndexSearcher> searcher = core.getSearcher(true, true, waitSearcher, true);
       try {
         if (waitSearcher[0] != null) {
@@ -1087,23 +1049,23 @@ public class IndexFetcher {
   }
 
   private void downloadConfFiles(
-      List<Map<String, Object>> confFilesToDownload, long latestGeneration) throws Exception {
+      List<Map<String, Object>> confFilesToDownload, long latestGeneration) {
     log.info("Starting download of configuration files from leader: {}", confFilesToDownload);
     confFilesDownloaded = Collections.synchronizedList(new ArrayList<>());
-    Path tmpConfPath =
+    Path tmpConfDir =
         solrCore.getResourceLoader().getConfigPath().resolve("conf." + getDateAsStr(new Date()));
-    File tmpconfDir = tmpConfPath.toFile();
     try {
-      boolean status = tmpconfDir.mkdirs();
-      if (!status) {
+      try {
+        Files.createDirectories(tmpConfDir);
+      } catch (Exception e) {
         throw new SolrException(
             SolrException.ErrorCode.SERVER_ERROR,
-            "Failed to create temporary config folder: " + tmpconfDir.getName());
+            "Failed to create temporary config folder: " + tmpConfDir.getFileName());
       }
       for (Map<String, Object> file : confFilesToDownload) {
         String saveAs = (String) (file.get(ALIAS) == null ? file.get(NAME) : file.get(ALIAS));
         localFileFetcher =
-            new LocalFsFileFetcher(tmpconfDir, file, saveAs, CONF_FILE_SHORT, latestGeneration);
+            new LocalFsFileFetcher(tmpConfDir, file, saveAs, CONF_FILE_SHORT, latestGeneration);
         currentFile = file;
         localFileFetcher.fetchFile();
         confFilesDownloaded.add(new HashMap<>(file));
@@ -1111,9 +1073,13 @@ public class IndexFetcher {
       // this is called before copying the files to the original conf dir
       // so that if there is an exception avoid corrupting the original files.
       terminateAndWaitFsyncService();
-      copyTmpConfFiles2Conf(tmpConfPath);
+      copyTmpConfFiles2Conf(tmpConfDir);
+
+    } catch (Exception e) {
+      throw new SolrException(
+          ErrorCode.SERVER_ERROR, "Failed to download configuration files from leader", e);
     } finally {
-      delTree(tmpconfDir);
+      delTree(tmpConfDir);
     }
   }
 
@@ -1148,21 +1114,11 @@ public class IndexFetcher {
                 || (tmpIndexDir instanceof FilterDirectory
                     && FilterDirectory.unwrap(tmpIndexDir) instanceof FSDirectory));
 
-    long totalSpaceRequired = 0;
-    for (Map<String, Object> file : filesToDownload) {
-      long size = (Long) file.get(SIZE);
-      totalSpaceRequired += size;
-    }
-
     if (log.isInfoEnabled()) {
       log.info(
           "tmpIndexDir_type  : {} , {}",
           tmpIndexDir.getClass(),
           FilterDirectory.unwrap(tmpIndexDir));
-    }
-    long usableSpace = usableDiskSpaceProvider.apply(tmpIndexDirPath);
-    if (getApproxTotalSpaceReqd(totalSpaceRequired) > usableSpace) {
-      deleteFilesInAdvance(indexDir, indexDirPath, totalSpaceRequired, usableSpace);
     }
 
     for (Map<String, Object> file : filesToDownload) {
@@ -1180,22 +1136,22 @@ public class IndexFetcher {
             alwaysDownload);
       }
       if (!compareResult.equal || downloadCompleteIndex || alwaysDownload) {
-        File localFile = new File(indexDirPath, filename);
+        Path localFile = Path.of(indexDirPath, filename);
         if (downloadCompleteIndex
             && doDifferentialCopy
             && compareResult.equal
             && compareResult.checkSummed
-            && localFile.exists()) {
+            && Files.exists(localFile)) {
           if (log.isInfoEnabled()) {
             log.info(
                 "Don't need to download this file. Local file's path is: {}, checksum is: {}",
-                localFile.getAbsolutePath(),
+                localFile.toAbsolutePath(),
                 file.get(CHECKSUM));
           }
           // A hard link here should survive the eventual directory move, and should be more space
           // efficient as compared to a file copy. TODO: Maybe we could do a move safely here?
-          Files.createLink(Path.of(tmpIndexDirPath, filename), localFile.toPath());
-          bytesSkippedCopying += localFile.length();
+          Files.createLink(Path.of(tmpIndexDirPath, filename), localFile);
+          bytesSkippedCopying += Files.size(localFile);
         } else {
           dirFileFetcher =
               new DirectoryFileFetcher(
@@ -1221,84 +1177,8 @@ public class IndexFetcher {
   // only for testing purposes. do not use this anywhere else
   // -----------START----------------------
   static BooleanSupplier testWait = () -> true;
-  static Function<String, Long> usableDiskSpaceProvider = dir -> getUsableSpace(dir);
 
   // ------------ END---------------------
-
-  private static Long getUsableSpace(String dir) {
-    try {
-      File file = new File(dir);
-      if (!file.exists()) {
-        file = file.getParentFile();
-        // this is not a disk directory. so just pretend that there is enough space
-        if (!file.exists()) {
-          return Long.MAX_VALUE;
-        }
-      }
-      FileStore fileStore = Files.getFileStore(file.toPath());
-      return fileStore.getUsableSpace();
-    } catch (IOException e) {
-      throw new SolrException(ErrorCode.SERVER_ERROR, "Could not free disk space", e);
-    }
-  }
-
-  private long getApproxTotalSpaceReqd(long totalSpaceRequired) {
-    long approxTotalSpaceReqd = (long) (totalSpaceRequired * 1.05); // add 5% extra for safety
-    // we should have an extra of 100MB free after everything is downloaded
-    approxTotalSpaceReqd += (100 * 1024 * 1024);
-    return approxTotalSpaceReqd;
-  }
-
-  private void deleteFilesInAdvance(
-      Directory indexDir, String indexDirPath, long usableDiskSpace, long totalSpaceRequired)
-      throws IOException {
-    long actualSpaceReqd = totalSpaceRequired;
-    List<String> filesTobeDeleted = new ArrayList<>();
-    long clearedSpace = 0;
-    // go through each file to check if this needs to be deleted
-    for (String f : indexDir.listAll()) {
-      for (Map<String, Object> fileInfo : filesToDownload) {
-        if (f.equals(fileInfo.get(NAME))) {
-          String filename = (String) fileInfo.get(NAME);
-          long size = (Long) fileInfo.get(SIZE);
-          CompareResult compareResult =
-              compareFile(indexDir, filename, size, (Long) fileInfo.get(CHECKSUM));
-          if (!compareResult.equal || filesToAlwaysDownloadIfNoChecksums(f, size, compareResult)) {
-            filesTobeDeleted.add(f);
-            clearedSpace += size;
-          } else {
-            /*this file will not be downloaded*/
-            actualSpaceReqd -= size;
-          }
-        }
-      }
-    }
-    if (usableDiskSpace > getApproxTotalSpaceReqd(actualSpaceReqd)) {
-      // after considering the files actually available locally we really don't need to do any
-      // delete
-      return;
-    }
-    log.info(
-        "This disk does not have enough space to download the index from leader. So cleaning up the local index. "
-            + " This may lead to loss of data/or node if index replication fails in between");
-    // now we should disable searchers and index writers because this core will not have all the
-    // required files
-    this.clearLocalIndexFirst = true;
-    this.solrCore.searchEnabled = false;
-    this.solrCore.indexEnabled = false;
-    solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
-    solrCore.deleteNonSnapshotIndexFiles(indexDirPath);
-    this.solrCore.closeSearcher();
-    assert testWait.getAsBoolean();
-    solrCore.getUpdateHandler().getSolrCoreState().closeIndexWriter(this.solrCore, false);
-    for (String f : filesTobeDeleted) {
-      try {
-        indexDir.deleteFile(f);
-      } catch (FileNotFoundException | NoSuchFileException e) {
-        // no problem , it was deleted by someone else
-      }
-    }
-  }
 
   static boolean filesToAlwaysDownloadIfNoChecksums(
       String filename, long size, CompareResult compareResult) {
@@ -1320,11 +1200,11 @@ public class IndexFetcher {
       Directory indexDir, String filename, Long backupIndexFileLen, Long backupIndexFileChecksum) {
     CompareResult compareResult = new CompareResult();
     try {
-      try (final IndexInput indexInput = indexDir.openInput(filename, IOContext.READONCE)) {
-        long indexFileLen = indexInput.length();
-        long indexFileChecksum = 0;
-
-        if (backupIndexFileChecksum != null) {
+      long indexFileLen;
+      long indexFileChecksum = 0;
+      if (backupIndexFileChecksum != null) {
+        try (final IndexInput indexInput = indexDir.openInput(filename, IOContext.READONCE)) {
+          indexFileLen = indexInput.length();
           try {
             indexFileChecksum = CodecUtil.retrieveChecksum(indexInput);
             compareResult.checkSummed = true;
@@ -1332,47 +1212,49 @@ public class IndexFetcher {
             log.warn("Could not retrieve checksum from file.", e);
           }
         }
+      } else {
+        indexFileLen = indexDir.fileLength(filename);
+      }
 
-        if (!compareResult.checkSummed) {
-          // we don't have checksums to compare
+      if (!compareResult.checkSummed) {
+        // we don't have checksums to compare
 
-          if (indexFileLen == backupIndexFileLen) {
-            compareResult.equal = true;
-            return compareResult;
-          } else {
-            log.info(
-                "File {} did not match. expected length is {} and actual length is {}",
-                filename,
-                backupIndexFileLen,
-                indexFileLen);
-            compareResult.equal = false;
-            return compareResult;
-          }
-        }
-
-        // we have checksums to compare
-
-        if (indexFileLen == backupIndexFileLen && indexFileChecksum == backupIndexFileChecksum) {
+        if (indexFileLen == backupIndexFileLen) {
           compareResult.equal = true;
           return compareResult;
         } else {
-          log.warn(
-              "File {} did not match. expected checksum is {} and actual is checksum {}. "
-                  + "expected length is {} and actual length is {}",
+          log.info(
+              "File {} did not match. expected length is {} and actual length is {}",
               filename,
-              backupIndexFileChecksum,
-              indexFileChecksum,
               backupIndexFileLen,
               indexFileLen);
           compareResult.equal = false;
           return compareResult;
         }
       }
+
+      // we have checksums to compare
+
+      if (indexFileLen == backupIndexFileLen && indexFileChecksum == backupIndexFileChecksum) {
+        compareResult.equal = true;
+        return compareResult;
+      } else {
+        log.warn(
+            "File {} did not match. expected checksum is {} and actual is checksum {}. "
+                + "expected length is {} and actual length is {}",
+            filename,
+            backupIndexFileChecksum,
+            indexFileChecksum,
+            backupIndexFileLen,
+            indexFileLen);
+        compareResult.equal = false;
+        return compareResult;
+      }
     } catch (NoSuchFileException | FileNotFoundException e) {
       compareResult.equal = false;
       return compareResult;
     } catch (IOException e) {
-      log.error("Could not read file {}. Downloading it again", filename, e);
+      log.error("Could not read file {}. Assuming it is out of date", filename, e);
       compareResult.equal = false;
       return compareResult;
     }
@@ -1395,7 +1277,7 @@ public class IndexFetcher {
    * All the files which are common between leader and follower must have same size and same
    * checksum else we assume they are not compatible (stale).
    *
-   * @return true if the index stale and we need to download a fresh copy, false otherwise.
+   * @return true if the index is stale, and we need to download a fresh copy, false otherwise.
    * @throws IOException if low level io error
    */
   private boolean isIndexStale(Directory dir) throws IOException {
@@ -1403,22 +1285,9 @@ public class IndexFetcher {
       String filename = (String) file.get(NAME);
       Long length = (Long) file.get(SIZE);
       Long checksum = (Long) file.get(CHECKSUM);
-      if (slowFileExists(dir, filename)) {
-        if (checksum != null) {
-          if (!(compareFile(dir, filename, length, checksum).equal)) {
-            // file exists and size or checksum is different, therefore we must download it again
-            return true;
-          }
-        } else {
-          if (length != dir.fileLength(filename)) {
-            log.warn(
-                "File {} did not match. expected length is {} and actual length is {}",
-                filename,
-                length,
-                dir.fileLength(filename));
-            return true;
-          }
-        }
+      if (!(compareFile(dir, filename, length, checksum).equal)) {
+        // file exists and size or checksum is different, therefore we must download it again
+        return true;
       }
     }
     return false;
@@ -1493,7 +1362,7 @@ public class IndexFetcher {
       return Files.walk(dir).filter(Files::isRegularFile).collect(Collectors.toList());
     } catch (IOException e) {
       log.warn("Could not walk file tree", e);
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
@@ -1507,6 +1376,7 @@ public class IndexFetcher {
     int numTempPathElements = tmpconfDir.getNameCount();
     for (Path path : makeTmpConfDirFileList(tmpconfDir)) {
       Path oldPath = confPath.resolve(path.subpath(numTempPathElements, path.getNameCount()));
+
       try {
         Files.createDirectories(oldPath.getParent());
       } catch (IOException e) {
@@ -1514,21 +1384,16 @@ public class IndexFetcher {
             ErrorCode.SERVER_ERROR, "Unable to mkdirs: " + oldPath.getParent(), e);
       }
       if (Files.exists(oldPath)) {
-        File oldFile = oldPath.toFile(); // TODO drop this
-        File backupFile =
-            new File(oldFile.getPath() + "." + getDateAsStr(new Date(oldFile.lastModified())));
-        if (!backupFile.getParentFile().exists()) {
-          status = backupFile.getParentFile().mkdirs();
-          if (!status) {
-            throw new SolrException(
-                ErrorCode.SERVER_ERROR, "Unable to mkdirs: " + backupFile.getParentFile());
-          }
-        }
-        status = oldFile.renameTo(backupFile);
-        if (!status) {
+        try {
+          Path backupFile =
+              oldPath.resolveSibling(
+                  oldPath.getFileName()
+                      + "."
+                      + getDateAsStr(new Date(Files.getLastModifiedTime(oldPath).toMillis())));
+          Files.move(oldPath, backupFile);
+        } catch (Exception e) {
           throw new SolrException(
-              SolrException.ErrorCode.SERVER_ERROR,
-              "Unable to rename: " + oldFile + " to: " + backupFile);
+              SolrException.ErrorCode.SERVER_ERROR, "Unable to backup old file: " + oldPath, e);
         }
       }
       try {
@@ -1540,54 +1405,11 @@ public class IndexFetcher {
     }
   }
 
-  /**
-   * The tlog files are moved from the tmp dir to the tlog dir as an atomic filesystem operation. A
-   * backup of the old directory is maintained. If the directory move fails, it will try to revert
-   * back the original tlog directory.
-   */
-  private boolean copyTmpTlogFiles2Tlog(File tmpTlogDir) {
-    Path tlogDir =
-        FileSystems.getDefault().getPath(solrCore.getUpdateHandler().getUpdateLog().getLogDir());
-    Path backupTlogDir =
-        FileSystems.getDefault()
-            .getPath(tlogDir.getParent().toAbsolutePath().toString(), tmpTlogDir.getName());
-
-    try {
-      Files.move(tlogDir, backupTlogDir, StandardCopyOption.ATOMIC_MOVE);
-    } catch (IOException e) {
-      log.error("Unable to rename: {} to: {}", tlogDir, backupTlogDir, e);
-      return false;
-    }
-
-    Path src =
-        FileSystems.getDefault()
-            .getPath(backupTlogDir.toAbsolutePath().toString(), tmpTlogDir.getName());
-    try {
-      Files.move(src, tlogDir, StandardCopyOption.ATOMIC_MOVE);
-    } catch (IOException e) {
-      log.error("Unable to rename: {} to: {}", src, tlogDir, e);
-
-      // In case of error, try to revert back the original tlog directory
-      try {
-        Files.move(backupTlogDir, tlogDir, StandardCopyOption.ATOMIC_MOVE);
-      } catch (IOException e2) {
-        // bad, we were not able to revert back the original tlog directory
-        throw new SolrException(
-            SolrException.ErrorCode.SERVER_ERROR,
-            "Unable to rename: " + backupTlogDir + " to: " + tlogDir);
-      }
-
-      return false;
-    }
-
-    return true;
-  }
-
   private String getDateAsStr(Date d) {
     return new SimpleDateFormat(SnapShooter.DATE_FMT, Locale.ROOT).format(d);
   }
 
-  private final Map<String, FileInfo> confFileInfoCache = new HashMap<>();
+  private final Map<String, ReplicationHandler.FileInfo> confFileInfoCache = new HashMap<>();
 
   /**
    * The local conf files are compared with the conf files in the leader. If they are same (by
@@ -1599,8 +1421,7 @@ public class IndexFetcher {
    */
   private Collection<Map<String, Object>> getModifiedConfFiles(
       List<Map<String, Object>> confFilesToDownload) {
-    if (confFilesToDownload == null || confFilesToDownload.isEmpty())
-      return Collections.emptyList();
+    if (confFilesToDownload == null || confFilesToDownload.isEmpty()) return List.of();
     // build a map with alias/name as the key
     Map<String, Map<String, Object>> nameVsFile = new HashMap<>();
     NamedList<String> names = new NamedList<>();
@@ -1611,10 +1432,10 @@ public class IndexFetcher {
       names.add(name, null);
     }
     // get the details of the local conf files with the same alias/name
-    List<CoreReplicationAPI.FileMetaData> localFilesInfo =
+    List<FileMetaData> localFilesInfo =
         replicationHandler.getConfFileInfoFromCache(names, confFileInfoCache);
     // compare their size/checksum to see if
-    for (CoreReplicationAPI.FileMetaData fileInfo : localFilesInfo) {
+    for (FileMetaData fileInfo : localFilesInfo) {
       String name = fileInfo.name;
       Map<String, Object> m = nameVsFile.get(name);
       if (m == null) continue; // the file is not even present locally (so must be downloaded)
@@ -1622,29 +1443,12 @@ public class IndexFetcher {
         nameVsFile.remove(name); // checksums are same so the file need not be downloaded
       }
     }
-    return nameVsFile.isEmpty() ? Collections.emptyList() : nameVsFile.values();
+    return nameVsFile.isEmpty() ? List.of() : nameVsFile.values();
   }
 
-  /**
-   * This simulates File.delete exception-wise, since this class has some strange behavior with it.
-   * The only difference is it returns null on success, throws SecurityException on
-   * SecurityException, otherwise returns Throwable preventing deletion (instead of false), for
-   * additional information.
-   */
-  static Throwable delete(File file) {
+  static boolean delTree(Path dir) {
     try {
-      Files.delete(file.toPath());
-      return null;
-    } catch (SecurityException e) {
-      throw e;
-    } catch (Throwable other) {
-      return other;
-    }
-  }
-
-  static boolean delTree(File dir) {
-    try {
-      org.apache.lucene.util.IOUtils.rm(dir.toPath());
+      org.apache.lucene.util.IOUtils.rm(dir);
       return true;
     } catch (IOException e) {
       log.warn("Unable to delete directory : {}", dir, e);
@@ -1684,25 +1488,25 @@ public class IndexFetcher {
     // make a copy first because it can be null later
     List<Map<String, Object>> tmp = confFilesToDownload;
     // create a new instance. or else iterator may fail
-    return tmp == null ? Collections.emptyList() : new ArrayList<>(tmp);
+    return tmp == null ? List.of() : new ArrayList<>(tmp);
   }
 
   List<Map<String, Object>> getConfFilesDownloaded() {
     // make a copy first because it can be null later
     List<Map<String, Object>> tmp = confFilesDownloaded;
     // NOTE: it's safe to make a copy of a SynchronizedCollection(ArrayList)
-    return tmp == null ? Collections.emptyList() : new ArrayList<>(tmp);
+    return tmp == null ? List.of() : new ArrayList<>(tmp);
   }
 
   List<Map<String, Object>> getFilesToDownload() {
     // make a copy first because it can be null later
     List<Map<String, Object>> tmp = filesToDownload;
-    return tmp == null ? Collections.emptyList() : new ArrayList<>(tmp);
+    return tmp == null ? List.of() : new ArrayList<>(tmp);
   }
 
   List<Map<String, Object>> getFilesDownloaded() {
     List<Map<String, Object>> tmp = filesDownloaded;
-    return tmp == null ? Collections.emptyList() : new ArrayList<>(tmp);
+    return tmp == null ? List.of() : new ArrayList<>(tmp);
   }
 
   // TODO: currently does not reflect conf files
@@ -1735,7 +1539,7 @@ public class IndexFetcher {
    * The class acts as a client for ReplicationHandler.FileStream. It understands the protocol of
    * wt=filestream
    *
-   * @see org.apache.solr.handler.ReplicationHandler.DirectoryFileStream
+   * <p>see org.apache.solr.handler.admin.api.ReplicationAPIBase.DirectoryFileStream
    */
   private class FileFetcher {
     private final FileInterface file;
@@ -1757,12 +1561,11 @@ public class IndexFetcher {
         Map<String, Object> fileDetails,
         String saveAs,
         String solrParamOutput,
-        long latestGen)
-        throws IOException {
+        long latestGen) {
       this.file = file;
       this.fileName = (String) fileDetails.get(NAME);
       this.size = (Long) fileDetails.get(SIZE);
-      buf = new byte[(int) Math.min(this.size, ReplicationHandler.PACKET_SZ)];
+      buf = new byte[(int) Math.min(this.size, ReplicationAPIBase.PACKET_SZ)];
       this.solrParamOutput = solrParamOutput;
       this.saveAs = saveAs;
       indexGen = latestGen;
@@ -1796,10 +1599,10 @@ public class IndexFetcher {
     private void fetch() throws Exception {
       try {
         while (true) {
-          int result;
-          try (FastInputStream is = getStream()) {
+          try (FastInputStream fis = getStream()) {
+            int result;
             // fetch packets one by one in a single request
-            result = fetchPackets(is);
+            result = fetchPackets(fis);
             if (result == 0 || result == NO_CONTENT) {
               return;
             }
@@ -1808,12 +1611,12 @@ public class IndexFetcher {
         }
       } finally {
         cleanup();
-        // if cleanup succeeds . The file is downloaded fully. do an fsync
-        fsyncService.submit(
+        // if cleanup succeeds, and the file is downloaded fully, then do a fsync.
+        fsyncService.execute(
             () -> {
               try {
                 file.sync();
-              } catch (IOException e) {
+              } catch (IOException | AlreadyClosedException e) {
                 fsyncException = e;
               }
             });
@@ -1825,18 +1628,25 @@ public class IndexFetcher {
       byte[] longbytes = new byte[8];
       try {
         while (true) {
+          if (fis.peek() == -1) {
+            if (bytesDownloaded == 0) {
+              log.warn("No content received for file: {}", fileName);
+              return NO_CONTENT;
+            }
+            return 0;
+          }
           if (stop) {
             stop = false;
             aborted = true;
             throw new ReplicationHandlerException("User aborted replication");
           }
           long checkSumServer = -1;
+
           fis.readFully(intbytes);
           // read the size of the packet
           int packetSize = readInt(intbytes);
           if (packetSize <= 0) {
-            log.warn("No content received for file: {}", fileName);
-            return NO_CONTENT;
+            continue;
           }
           // TODO consider recoding the remaining logic to not use/need buf[]; instead use the
           // internal buffer of fis
@@ -1870,7 +1680,6 @@ public class IndexFetcher {
           log.debug("Fetched and wrote {} bytes of file: {}", bytesDownloaded, fileName);
           // errorCount is always set to zero after a successful packet
           errorCount = 0;
-          if (bytesDownloaded >= size) return 0;
         }
       } catch (ReplicationHandlerException e) {
         throw e;
@@ -1906,8 +1715,8 @@ public class IndexFetcher {
     }
 
     /**
-     * The webcontainer flushes the data only after it fills the buffer size. So, all data has to be
-     * read as readFully() other wise it fails. So read everything as bytes and then extract an
+     * The web container flushes the data only after it fills the buffer size. So, all data has to
+     * be read as readFully() otherwise it fails. So read everything as bytes and then extract an
      * integer out of it
      */
     private int readInt(byte[] b) {
@@ -1959,10 +1768,9 @@ public class IndexFetcher {
     private FastInputStream getStream() throws IOException {
       ModifiableSolrParams params = new ModifiableSolrParams();
 
-      //    //the method is command=filecontent
+      // the method is command=filecontent
       params.set(COMMAND, CMD_GET_FILE);
       params.set(GENERATION, Long.toString(indexGen));
-      params.set(CommonParams.QT, ReplicationHandler.PATH);
       // add the version to download. This is used to reserve the download
       params.set(solrParamOutput, fileName);
       if (useInternalCompression) {
@@ -1974,7 +1782,7 @@ public class IndexFetcher {
       }
       // wt=filestream this is a custom protocol
       params.set(CommonParams.WT, FILE_STREAM);
-      // This happen if there is a failure there is a retry. the offset=<sizedownloaded> ensures
+      // This happens if there is a failure there is a retry. the offset=<sizedownloaded> ensures
       // that the server starts from the offset
       if (bytesDownloaded > 0) {
         params.set(OFFSET, Long.toString(bytesDownloaded));
@@ -1982,27 +1790,41 @@ public class IndexFetcher {
 
       NamedList<?> response;
       InputStream is = null;
-
-      // TODO use shardhandler
-      try (SolrClient client =
-          new Builder(leaderUrl)
-              .withHttpClient(myHttpClient)
-              .withResponseParser(null)
-              .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
-              .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
-              .build()) {
-        QueryRequest req = new QueryRequest(params);
-        response = client.request(req);
+      try {
+        var req = createReplicationHandlerRequest(params);
+        req.setResponseParser(new InputStreamResponseParser(FILE_STREAM));
+        if (useExternalCompression) req.addHeader("Accept-Encoding", "gzip");
+        response = solrClient.requestWithBaseUrl(leaderBaseUrl, req, leaderCoreName);
+        final var responseStatus = (Integer) response.get("responseStatus");
         is = (InputStream) response.get("stream");
+
+        if (responseStatus != 200) {
+          final var errorMsg =
+              String.format(
+                  Locale.ROOT,
+                  "Unexpected status code [%d] when downloading file [%s].",
+                  responseStatus,
+                  fileName);
+          closeStreamAndBuildIOE(is, errorMsg, null);
+        }
+
         if (useInternalCompression) {
           is = new InflaterInputStream(is);
         }
         return new FastInputStream(is);
       } catch (Exception e) {
-        // close stream on error
-        IOUtils.closeQuietly(is);
-        throw new IOException("Could not download file '" + fileName + "'", e);
+        final var ioe = closeStreamAndBuildIOE(is, "Could not download file '" + fileName + "'", e);
+        throw ioe;
       }
+    }
+
+    private IOException closeStreamAndBuildIOE(
+        InputStream is, String exceptionMessage, Exception e) {
+      IOUtils.closeQuietly(is);
+      if (e != null) {
+        return new IOException(exceptionMessage, e);
+      }
+      return new IOException(exceptionMessage);
     }
   }
 
@@ -2019,7 +1841,7 @@ public class IndexFetcher {
 
     @Override
     public void sync() throws IOException {
-      copy2Dir.sync(Collections.singleton(saveAs));
+      copy2Dir.sync(Set.of(saveAs));
     }
 
     @Override
@@ -2038,7 +1860,7 @@ public class IndexFetcher {
     }
   }
 
-  private class DirectoryFileFetcher extends FileFetcher {
+  protected class DirectoryFileFetcher extends FileFetcher {
     DirectoryFileFetcher(
         Directory tmpIndexDir,
         Map<String, Object> fileDetails,
@@ -2052,33 +1874,32 @@ public class IndexFetcher {
   }
 
   private static class LocalFsFile implements FileInterface {
-    private File copy2Dir;
 
     FileChannel fileChannel;
     private FileOutputStream fileOutputStream;
-    File file;
+    Path file;
 
-    LocalFsFile(File dir, String saveAs) throws IOException {
-      this.copy2Dir = dir;
+    LocalFsFile(Path dir, String saveAs) throws IOException {
+      this.file = dir.resolve(saveAs);
 
-      this.file = new File(copy2Dir, saveAs);
-
-      File parentDir = this.file.getParentFile();
-      if (!parentDir.exists()) {
-        if (!parentDir.mkdirs()) {
+      Path parentDir = this.file.getParent();
+      if (Files.notExists(parentDir)) {
+        try {
+          Files.createDirectories(parentDir);
+        } catch (Exception e) {
           throw new SolrException(
               SolrException.ErrorCode.SERVER_ERROR,
               "Failed to create (sub)directory for file: " + saveAs);
         }
       }
 
-      this.fileOutputStream = new FileOutputStream(file);
+      this.fileOutputStream = new FileOutputStream(file.toFile());
       this.fileChannel = this.fileOutputStream.getChannel();
     }
 
     @Override
     public void sync() throws IOException {
-      FileUtils.sync(file);
+      org.apache.lucene.util.IOUtils.fsync(file, false);
     }
 
     @Override
@@ -2094,13 +1915,13 @@ public class IndexFetcher {
 
     @Override
     public void delete() throws Exception {
-      Files.delete(file.toPath());
+      Files.delete(file);
     }
   }
 
-  private class LocalFsFileFetcher extends FileFetcher {
+  protected class LocalFsFileFetcher extends FileFetcher {
     LocalFsFileFetcher(
-        File dir,
+        Path dir,
         Map<String, Object> fileDetails,
         String saveAs,
         String solrParamOutput,
@@ -2114,27 +1935,18 @@ public class IndexFetcher {
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.set(COMMAND, CMD_DETAILS);
     params.set("follower", false);
-    params.set(CommonParams.QT, ReplicationHandler.PATH);
 
-    // TODO use shardhandler
-    try (SolrClient client =
-        new HttpSolrClient.Builder(leaderUrl)
-            .withHttpClient(myHttpClient)
-            .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
-            .build()) {
-      QueryRequest request = new QueryRequest(params);
-      return client.request(request);
-    }
+    var request = createReplicationHandlerRequest(params);
+    return solrClient.requestWithBaseUrl(leaderBaseUrl, request, leaderCoreName);
   }
 
   public void destroy() {
     abortFetch();
-    HttpClientUtil.close(myHttpClient);
+    IOUtils.closeQuietly(solrClient);
   }
 
-  String getLeaderUrl() {
-    return leaderUrl;
+  String getLeaderCoreUrl() {
+    return leaderCoreUrl;
   }
 
   private static final int MAX_RETRIES = 5;
@@ -2148,8 +1960,6 @@ public class IndexFetcher {
   static final String INDEX_REPLICATED_AT = "indexReplicatedAt";
 
   static final String TIMES_INDEX_REPLICATED = "timesIndexReplicated";
-
-  static final String CLEARED_LOCAL_IDX = "clearedLocalIndexFirst";
 
   static final String CONF_FILES_REPLICATED = "confFilesReplicated";
 
