@@ -21,6 +21,8 @@ import static org.apache.solr.common.params.CommonParams.ID;
 import static org.apache.solr.common.params.CommonParams.VERSION_FIELD;
 import static org.apache.solr.search.QueryUtils.makeQueryable;
 
+import com.carrotsearch.hppc.LongHashSet;
+import com.carrotsearch.hppc.LongSet;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
@@ -72,14 +74,15 @@ import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.core.SolrCore;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.response.ResultContext;
 import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.response.transform.DocTransformer;
 import org.apache.solr.schema.FieldType;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.schema.SchemaField;
+import org.apache.solr.search.DocIterationInfo;
 import org.apache.solr.search.DocList;
 import org.apache.solr.search.DocValuesIteratorCache;
 import org.apache.solr.search.QueryUtils;
@@ -94,7 +97,6 @@ import org.apache.solr.update.PeerSync;
 import org.apache.solr.update.PeerSyncWithLeader;
 import org.apache.solr.update.UpdateLog;
 import org.apache.solr.update.processor.AtomicUpdateDocumentMerger;
-import org.apache.solr.util.LongSet;
 import org.apache.solr.util.RefCounted;
 import org.apache.solr.util.TestInjection;
 import org.slf4j.Logger;
@@ -278,7 +280,7 @@ public class RealTimeGetComponent extends SearchComponent {
                           (SolrInputDocument) entry.get(entry.size() - 1), core.getLatestSchema());
                   // toSolrDoc filtered copy-field targets already
                   if (transformer != null) {
-                    transformer.transform(doc, -1); // unknown docID
+                    transformer.transform(doc, -1, DocIterationInfo.NONE); // unknown docID
                   }
                 } else if (oper == UpdateLog.UPDATE_INPLACE) {
                   assert entry.size() == 5;
@@ -329,7 +331,7 @@ public class RealTimeGetComponent extends SearchComponent {
           if (rb.getFilters() != null) {
             for (Query raw : rb.getFilters()) {
               raw = makeQueryable(raw);
-              Query q = raw.rewrite(searcherInfo.getSearcher().getIndexReader());
+              Query q = raw.rewrite(searcherInfo.getSearcher());
               Scorer scorer =
                   searcherInfo
                       .getSearcher()
@@ -346,10 +348,10 @@ public class RealTimeGetComponent extends SearchComponent {
 
         if (docid < 0) continue;
 
-        Document luceneDocument =
-            searcherInfo.getSearcher().doc(docid, rsp.getReturnFields().getLuceneFieldNames());
-        SolrDocument doc = toSolrDoc(luceneDocument, core.getLatestSchema());
         SolrDocumentFetcher docFetcher = searcherInfo.getSearcher().getDocFetcher();
+        Document luceneDocument =
+            docFetcher.doc(docid, rsp.getReturnFields().getLuceneFieldNames());
+        SolrDocument doc = toSolrDoc(luceneDocument, core.getLatestSchema());
         if (reuseDvIters == null) {
           reuseDvIters = new DocValuesIteratorCache(searcherInfo.getSearcher());
         }
@@ -363,7 +365,7 @@ public class RealTimeGetComponent extends SearchComponent {
             transformer.setContext(
                 resultContext); // we avoid calling setContext unless searcher is new/changed
           }
-          transformer.transform(doc, docid);
+          transformer.transform(doc, docid, DocIterationInfo.NONE);
         }
         docList.add(doc);
       } // loop on ids
@@ -510,7 +512,7 @@ public class RealTimeGetComponent extends SearchComponent {
           toSolrDoc(partialDoc, schema, forInPlaceUpdate); // filters copy-field targets TODO don't
       DocTransformer transformer = returnFields.getTransformer();
       if (transformer != null && !transformer.needsSolrIndexSearcher()) {
-        transformer.transform(solrDoc, -1); // no docId when from the ulog
+        transformer.transform(solrDoc, -1, DocIterationInfo.NONE); // no docId when from the ulog
       } // if needs searcher, it must be [child]; tlog docs already have children
       return solrDoc;
     }
@@ -582,10 +584,7 @@ public class RealTimeGetComponent extends SearchComponent {
         searcher
             .getDocFetcher()
             .decorateDocValueFields(
-                doc,
-                docid,
-                Collections.singleton(VERSION_FIELD),
-                new DocValuesIteratorCache(searcher, false));
+                doc, docid, Set.of(VERSION_FIELD), new DocValuesIteratorCache(searcher, false));
       }
 
       long docVersion = (long) doc.getFirstValue(VERSION_FIELD);
@@ -621,7 +620,7 @@ public class RealTimeGetComponent extends SearchComponent {
     if (transformer != null) {
       transformer.setContext(
           new RTGResultContext(returnFields, searcher, null)); // we get away with null req
-      transformer.transform(solrDoc, docId);
+      transformer.transform(solrDoc, docId, DocIterationInfo.NONE);
     }
     return solrDoc;
   }
@@ -857,7 +856,7 @@ public class RealTimeGetComponent extends SearchComponent {
     if (resolution == Resolution.ROOT_WITH_CHILDREN
         && core.getLatestSchema().isUsableForChildDocs()) {
       SolrParams params = new ModifiableSolrParams().set("limit", "-1");
-      try (LocalSolrQueryRequest req = new LocalSolrQueryRequest(core, params)) {
+      try (SolrQueryRequestBase req = new SolrQueryRequestBase(core, params)) {
         docTransformer = core.getTransformerFactory("child").create(null, params, req);
       }
     } else {
@@ -878,8 +877,7 @@ public class RealTimeGetComponent extends SearchComponent {
         if ((!sf.hasDocValues() && !sf.stored()) || schema.isCopyFieldTarget(sf)) continue;
       }
       for (Object val : doc.getFieldValues(fname)) {
-        if (val instanceof IndexableField) {
-          IndexableField f = (IndexableField) val;
+        if (val instanceof IndexableField f) {
           // materialize:
           if (sf != null) {
             val = sf.getType().toObject(f); // object or external string?
@@ -1029,8 +1027,8 @@ public class RealTimeGetComponent extends SearchComponent {
 
   @Override
   public int distributedProcess(ResponseBuilder rb) throws IOException {
-    if (rb.stage < ResponseBuilder.STAGE_GET_FIELDS) return ResponseBuilder.STAGE_GET_FIELDS;
-    if (rb.stage == ResponseBuilder.STAGE_GET_FIELDS) {
+    if (rb.getStage() < ResponseBuilder.STAGE_GET_FIELDS) return ResponseBuilder.STAGE_GET_FIELDS;
+    if (rb.getStage() == ResponseBuilder.STAGE_GET_FIELDS) {
       return createSubRequests(rb);
     }
     return ResponseBuilder.STAGE_DONE;
@@ -1142,7 +1140,7 @@ public class RealTimeGetComponent extends SearchComponent {
 
   @Override
   public void finishStage(ResponseBuilder rb) {
-    if (rb.stage != ResponseBuilder.STAGE_GET_FIELDS) {
+    if (rb.getStage() != ResponseBuilder.STAGE_GET_FIELDS) {
       return;
     }
 
@@ -1342,7 +1340,7 @@ public class RealTimeGetComponent extends SearchComponent {
 
     // TODO: get this from cache instead of rebuilding?
     try (UpdateLog.RecentUpdates recentUpdates = ulog.getRecentUpdates()) {
-      LongSet updateVersions = new LongSet(versions.size());
+      LongSet updateVersions = new LongHashSet(versions.size());
       for (Long version : versions) {
         try {
           Object o = recentUpdates.lookup(version);
@@ -1373,7 +1371,7 @@ public class RealTimeGetComponent extends SearchComponent {
 
   private List<Long> resolveVersionRanges(String versionsStr, UpdateLog ulog) {
     if (StrUtils.isNullOrEmpty(versionsStr)) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     List<String> ranges = StrUtils.splitSmart(versionsStr, ",", true);
@@ -1456,7 +1454,7 @@ public class RealTimeGetComponent extends SearchComponent {
       final String ids[] = params.getParams("ids");
 
       if (id == null && ids == null) {
-        IdsRequested result = new IdsRequested(Collections.<String>emptyList(), true);
+        IdsRequested result = new IdsRequested(List.of(), true);
         req.getContext().put(contextKey, result);
         return result;
       }
