@@ -17,13 +17,13 @@
 package org.apache.solr.handler.component;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Set;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.response.ResultContext;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.search.DocIterator;
 import org.apache.solr.search.DocList;
+import org.apache.solr.search.SolrDocumentFetcher;
 import org.apache.solr.search.SolrIndexSearcher;
 
 /**
@@ -89,10 +89,11 @@ public class ResponseLogComponent extends SearchComponent {
 
     StringBuilder sb = new StringBuilder();
 
-    Set<String> fields = Collections.singleton(schema.getUniqueKeyField().getName());
+    Set<String> fields = Set.of(schema.getUniqueKeyField().getName());
+    SolrDocumentFetcher docFetcher = searcher.getDocFetcher();
     for (DocIterator iter = dl.iterator(); iter.hasNext(); ) {
 
-      sb.append(schema.printableUniqueKey(searcher.doc(iter.nextDoc(), fields))).append(',');
+      sb.append(schema.printableUniqueKey(docFetcher.doc(iter.nextDoc(), fields))).append(',');
     }
     if (sb.length() > 0) {
       rb.rsp.addToLog("responseLog", sb.substring(0, sb.length() - 1));
@@ -104,9 +105,10 @@ public class ResponseLogComponent extends SearchComponent {
       throws IOException {
 
     StringBuilder sb = new StringBuilder();
-    Set<String> fields = Collections.singleton(schema.getUniqueKeyField().getName());
+    Set<String> fields = Set.of(schema.getUniqueKeyField().getName());
+    SolrDocumentFetcher docFetcher = searcher.getDocFetcher();
     for (DocIterator iter = dl.iterator(); iter.hasNext(); ) {
-      sb.append(schema.printableUniqueKey(searcher.doc(iter.nextDoc(), fields)))
+      sb.append(schema.printableUniqueKey(docFetcher.doc(iter.nextDoc(), fields)))
           .append(':')
           .append(iter.score())
           .append(',');
