@@ -21,10 +21,11 @@ import java.lang.invoke.MethodHandles;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.StrUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -55,7 +56,7 @@ public class ModuleUtils {
    * @return set of raw volume names from sysprop and/or env.var
    */
   static Set<String> resolveFromSyspropOrEnv() {
-    return Set.copyOf(EnvUtils.getPropAsList("solr.modules", Collections.emptyList()));
+    return Set.copyOf(EnvUtils.getPropertyAsList("solr.modules", List.of()));
   }
 
   /** Returns true if a module name is valid and exists in the system */
@@ -74,7 +75,7 @@ public class ModuleUtils {
           .collect(Collectors.toSet());
     } catch (IOException e) {
       log.warn("Found no modules in {}", getModulesPath(solrInstallDirPath), e);
-      return Collections.emptySet();
+      return Set.of();
     }
   }
 
