@@ -16,22 +16,32 @@
  */
 package org.apache.solr.cloud.overseer;
 
+import static org.apache.solr.common.cloud.ZkStateReader.LIVE_NODE_NODE_NAME;
+import static org.apache.solr.common.cloud.ZkStateReader.LIVE_NODE_SOLR_VERSION;
+
 import java.io.Closeable;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.Path;
+import java.time.Instant;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.BrokenBarrierException;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.CyclicBarrier;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.concurrent.atomic.LongAdder;
 import org.apache.lucene.util.IOUtils;
 import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.client.api.util.SolrVersion;
 import org.apache.solr.cloud.OverseerTest;
 import org.apache.solr.cloud.Stats;
 import org.apache.solr.cloud.ZkController;
@@ -55,7 +65,9 @@ import org.apache.solr.common.util.ZLibCompressor;
 import org.apache.solr.handler.admin.ConfigSetsHandler;
 import org.apache.solr.util.LogLevel;
 import org.apache.solr.util.TimeOut;
+import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
+import org.apache.zookeeper.data.Stat;
 import org.junit.After;
 import org.junit.Before;
 import org.slf4j.Logger;
@@ -146,10 +158,11 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
                 Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
                 DocRouter.DEFAULT,
                 0,
+                Instant.now(),
                 PerReplicaStatesOps.getZkClientPrsSupplier(
                     fixture.zkClient, DocCollection.getCollectionPath("c1"))));
 
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(c1), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(c1), null);
     writer.writePendingUpdates();
     reader.forceUpdateCollection("c1");
 
@@ -173,12 +186,13 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     ZkWriteCommand wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
-    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json", true));
+    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json"));
     reader.waitForState(
         "c1", 1, TimeUnit.SECONDS, (liveNodes, collectionState) -> collectionState != null);
 
@@ -192,10 +206,11 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             props,
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
 
     boolean found = false;
@@ -233,19 +248,24 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     ZkWriteCommand wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
 
-    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json", true));
+    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json"));
 
     // reader.forceUpdateCollection("c1");
     reader.waitForState("c1", TIMEOUT, TimeUnit.SECONDS, (n, c) -> c != null);
     ClusterState.CollectionRef ref = reader.getClusterState().getCollectionRef("c1");
     assertNotNull(ref);
     assertFalse(ref.isLazilyLoaded());
+
+    Stat stat = new Stat();
+    fixture.zkClient.getData(ZkStateReader.getCollectionPath("c1"), null, stat);
+    assertEquals(Instant.ofEpochMilli(stat.getCtime()), ref.get().getCreationTime());
   }
 
   /**
@@ -271,10 +291,11 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
                 "true"),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     ZkWriteCommand wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(clusterState, Collections.singletonList(wc), null);
+    writer.enqueueUpdate(clusterState, List.of(wc), null);
     clusterState = writer.writePendingUpdates();
 
     // have to register it here after the updates, otherwise the child node watch will not be
@@ -327,7 +348,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
 
     // now delete the collection
     wc = new ZkWriteCommand("c1", null);
-    writer.enqueueUpdate(clusterState, Collections.singletonList(wc), null);
+    writer.enqueueUpdate(clusterState, List.of(wc), null);
     clusterState = writer.writePendingUpdates();
     timeOut.waitFor(
         "Timeout on waiting for c1 to be removed from cluster state",
@@ -336,7 +357,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
     reader.unregisterCore("c1");
     // re-add the same collection
     wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(clusterState, Collections.singletonList(wc), null);
+    writer.enqueueUpdate(clusterState, List.of(wc), null);
     clusterState = writer.writePendingUpdates();
     // re-register, otherwise the child watch would be missing from collection deletion
     reader.registerCore("c1");
@@ -391,13 +412,14 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     ZkWriteCommand wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
 
-    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json", true));
+    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json"));
 
     reader.forciblyRefreshAllClusterStateSlow();
     ClusterState.CollectionRef ref = reader.getClusterState().getCollectionRef("c1");
@@ -413,10 +435,11 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             ref.get().getZNodeVersion(),
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
 
     reader.forciblyRefreshAllClusterStateSlow();
@@ -436,6 +459,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c2")));
     ZkWriteCommand wc2 = new ZkWriteCommand("c2", state);
@@ -470,17 +494,19 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
 
     // create new collection
     DocCollection state =
-        new DocCollection(
+        DocCollection.create(
             "c1",
             new HashMap<>(),
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
-            0);
+            0,
+            Instant.now(),
+            null);
     ZkWriteCommand wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
 
-    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json", true));
+    assertTrue(fixture.zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/c1/state.json"));
 
     reader.forciblyRefreshAllClusterStateSlow();
     ClusterState.CollectionRef ref = reader.getClusterState().getCollectionRef("c1");
@@ -490,14 +516,16 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
 
     // update the collection
     state =
-        new DocCollection(
+        DocCollection.create(
             "c1",
             new HashMap<>(),
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
-            ref.get().getZNodeVersion());
+            ref.get().getZNodeVersion(),
+            Instant.now(),
+            null);
     wc = new ZkWriteCommand("c1", state);
-    writer.enqueueUpdate(reader.getClusterState(), Collections.singletonList(wc), null);
+    writer.enqueueUpdate(reader.getClusterState(), List.of(wc), null);
     writer.writePendingUpdates();
 
     reader.forciblyRefreshAllClusterStateSlow();
@@ -511,12 +539,14 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
 
     fixture.zkClient.makePath(ZkStateReader.COLLECTIONS_ZKNODE + "/c2", true);
     state =
-        new DocCollection(
+        DocCollection.create(
             "c2",
             new HashMap<>(),
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
-            0);
+            0,
+            Instant.now(),
+            null);
     ZkWriteCommand wc2 = new ZkWriteCommand("c2", state);
 
     writer.enqueueUpdate(reader.getClusterState(), Arrays.asList(wc1, wc2), null);
@@ -552,6 +582,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
     ZkWriteCommand wc1 = new ZkWriteCommand("c1", state1);
@@ -562,6 +593,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
             Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath("c1")));
 
@@ -600,7 +632,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
 
       // start another thread to constantly updating the state
       final AtomicReference<Exception> updateException = new AtomicReference<>();
-      executorService.submit(
+      executorService.execute(
           () -> {
             try {
               ClusterState clusterState = reader.getClusterState();
@@ -617,17 +649,17 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
                             ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
                         DocRouter.DEFAULT,
                         currentVersion,
+                        Instant.now(),
                         PerReplicaStatesOps.getZkClientPrsSupplier(
                             fixture.zkClient, DocCollection.getCollectionPath("c1")));
                 ZkWriteCommand wc = new ZkWriteCommand("c1", state);
-                writer.enqueueUpdate(clusterState, Collections.singletonList(wc), null);
+                writer.enqueueUpdate(clusterState, List.of(wc), null);
                 clusterState = writer.writePendingUpdates();
                 TimeUnit.MILLISECONDS.sleep(100);
               }
             } catch (Exception e) {
               updateException.set(e);
             }
-            return null;
           });
       executorService.shutdown();
 
@@ -669,6 +701,82 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
   }
 
   /**
+   * Simulates race condition that can arise from the normal way in which the removal of collection
+   * StateWatchers is deferred.
+   *
+   * <p>StateWatchers are registered at the level of Zk code, so when StateWatchers are removed in
+   * Solr code, the actual removal is deferred until the next callback for the associated collection
+   * fires, at which point the removed watcher should allow itself to expire. If a watcher is
+   * re-added for the associated collection in the intervening time, only the most recently added
+   * watcher should re-register; the removed watcher should simply expire.
+   *
+   * <p>Duplicate/redundant StateWatchers should no longer be registered with the new code that
+   * tracks the currently registered singleton-per-collection watcher in Solr code, and only
+   * re-registers the currently active watcher, with all other watchers allowing themselves to
+   * expire.
+   */
+  public void testStateWatcherRaceCondition() throws Exception {
+    ZkStateWriter writer = fixture.writer;
+    final ZkStateReader reader = fixture.reader;
+    fixture.zkClient.makePath(ZkStateReader.COLLECTIONS_ZKNODE + "/c1", true);
+    int extraWatchers = 10;
+    int iterations = 10;
+    for (int i = 0; i < extraWatchers; i++) {
+      // add and remove a bunch of watchers
+      DocCollectionWatcher w = (coll) -> false;
+      try {
+        reader.registerDocCollectionWatcher("c1", w);
+      } finally {
+        reader.removeDocCollectionWatcher("c1", w);
+      }
+    }
+    final ConcurrentHashMap<Integer, LongAdder> invoked = new ConcurrentHashMap<>();
+    CyclicBarrier barrier = new CyclicBarrier(2);
+    reader.registerDocCollectionWatcher(
+        "c1",
+        (coll) -> {
+          // add a watcher that tracks how many times it's invoked per znode version
+          if (coll != null) {
+            invoked.computeIfAbsent(coll.getZNodeVersion(), (k) -> new LongAdder()).increment();
+            try {
+              barrier.await(250, TimeUnit.MILLISECONDS);
+            } catch (InterruptedException | TimeoutException | BrokenBarrierException e) {
+              throw new RuntimeException(e);
+            }
+          }
+          return false;
+        });
+
+    ClusterState clusterState = reader.getClusterState();
+    int dataVersion = -1;
+    for (int i = 0; i < iterations; i++) {
+      // create or update collection
+      DocCollection state =
+          DocCollection.create(
+              "c1",
+              new HashMap<>(),
+              Map.of(ZkStateReader.CONFIGNAME_PROP, ConfigSetsHandler.DEFAULT_CONFIGSET_NAME),
+              DocRouter.DEFAULT,
+              dataVersion,
+              Instant.now(),
+              PerReplicaStatesOps.getZkClientPrsSupplier(
+                  fixture.zkClient, DocCollection.getCollectionPath("c1")));
+      ZkWriteCommand wc = new ZkWriteCommand("c1", state);
+      writer.enqueueUpdate(clusterState, List.of(wc), null);
+      clusterState = writer.writePendingUpdates();
+      barrier.await(250, TimeUnit.MILLISECONDS); // wait for the watch callback to execute
+      fixture.zkClient.makePath(ZkStateReader.COLLECTIONS_ZKNODE + "/c1" + i, true);
+      dataVersion = clusterState.getCollectionOrNull("c1").getZNodeVersion();
+    }
+    // expect to have been invoked for each iteration ...
+    assertEquals(iterations, invoked.size());
+    // ... and only _once_ for each iteration
+    assertTrue(
+        "wrong number of watchers (expected 1): " + invoked,
+        invoked.values().stream().mapToLong(LongAdder::sum).allMatch((l) -> l == 1));
+  }
+
+  /**
    * Ensure that collection state fetching (getCollectionLive etc.) would not throw exception when
    * the state.json is deleted in between the state.json read and PRS entries read
    */
@@ -690,13 +798,14 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
         DocCollection.create(
             collectionName,
             Map.of(sliceName, slice),
-            Collections.singletonMap(DocCollection.CollectionStateProps.PER_REPLICA_STATE, true),
+            Map.of(DocCollection.CollectionStateProps.PER_REPLICA_STATE, true),
             DocRouter.DEFAULT,
             0,
+            Instant.now(),
             PerReplicaStatesOps.getZkClientPrsSupplier(
                 fixture.zkClient, DocCollection.getCollectionPath(collectionName)));
     ZkWriteCommand wc = new ZkWriteCommand(collectionName, state);
-    writer.enqueueUpdate(clusterState, Collections.singletonList(wc), null);
+    writer.enqueueUpdate(clusterState, List.of(wc), null);
     clusterState = writer.writePendingUpdates();
 
     TimeOut timeOut = new TimeOut(5000, TimeUnit.MILLISECONDS, TimeSource.NANO_TIME);
@@ -732,7 +841,7 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
     wc =
         new ZkWriteCommand(
             collectionName, SliceMutator.updateReplica(state, slice, replica.getName(), replica));
-    writer.enqueueUpdate(clusterState, Collections.singletonList(wc), null);
+    writer.enqueueUpdate(clusterState, List.of(wc), null);
     clusterState = writer.writePendingUpdates();
 
     timeOut.waitFor(
@@ -783,5 +892,116 @@ public class ZkStateReaderTest extends SolrTestCaseJ4 {
 
       assertTrue(prsZkNodeNotFoundExceptionThrown.get());
     }
+  }
+
+  /** Test when two live nodes have valid SemVer strings */
+  public void testFetchLowestSolrVersion_validNodes() throws Exception {
+    SolrZkClient zkClient = fixture.zkClient;
+    ZkStateReader reader = fixture.reader;
+    String livePath = ZkStateReader.LIVE_NODES_ZKNODE;
+
+    // Clear any existing live node children.
+    List<String> nodes = zkClient.getChildren(livePath, null);
+    for (String node : nodes) {
+      zkClient.delete(livePath + "/" + node, -1);
+    }
+
+    // Create two live nodes with valid SemVer strings.
+    String node1 = "node1_solr";
+    Map<String, Object> props1 = new HashMap<>();
+    props1.put(LIVE_NODE_SOLR_VERSION, "9.1.2");
+    props1.put(LIVE_NODE_NODE_NAME, node1);
+    byte[] data1 = Utils.toJSON(props1);
+    zkClient.create(livePath + "/" + node1, data1, CreateMode.EPHEMERAL);
+
+    String node2 = "node2_solr";
+    Map<String, Object> props2 = new HashMap<>();
+    props2.put(LIVE_NODE_SOLR_VERSION, "9.0.1");
+    props2.put(LIVE_NODE_NODE_NAME, node2);
+    byte[] data2 = Utils.toJSON(props2);
+    zkClient.create(livePath + "/" + node2, data2, CreateMode.EPHEMERAL);
+
+    var lowestVersion = reader.fetchLowestSolrVersion();
+    assertTrue("Expected lowest version to be present", lowestVersion.isPresent());
+    assertEquals(
+        "Expected lowest version to be 9.0.1", SolrVersion.valueOf("9.0.1"), lowestVersion.get());
+  }
+
+  /** Test when the only live node has empty data. */
+  public void testFetchLowestSolrVersion_noData() throws Exception {
+    SolrZkClient zkClient = fixture.zkClient;
+    ZkStateReader reader = fixture.reader;
+    String livePath = ZkStateReader.LIVE_NODES_ZKNODE;
+
+    // Clear any existing live node children.
+    List<String> nodes = zkClient.getChildren(livePath, null);
+    for (String node : nodes) {
+      zkClient.delete(livePath + "/" + node, -1);
+    }
+
+    // Create a live node with empty data.
+    String emptyNode = "empty_node";
+    zkClient.create(livePath + "/" + emptyNode, new byte[0], CreateMode.EPHEMERAL);
+
+    var lowestVersion = reader.fetchLowestSolrVersion();
+    assertTrue("Expected lowest version to be present for empty node", lowestVersion.isPresent());
+    assertEquals("after empty node", SolrVersion.valueOf("9.9.0"), lowestVersion.get());
+  }
+
+  /** Test when two live nodes exist; one is blank and the other has a high version */
+  public void testFetchLowestSolrVersion_blankAndHighVersion() throws Exception {
+    SolrZkClient zkClient = fixture.zkClient;
+    ZkStateReader reader = fixture.reader;
+    String livePath = ZkStateReader.LIVE_NODES_ZKNODE;
+
+    // Clear any existing live node children.
+    List<String> nodes = zkClient.getChildren(livePath, null);
+    for (String node : nodes) {
+      zkClient.delete(livePath + "/" + node, -1);
+    }
+
+    String node1 = "node1_solr";
+    zkClient.create(
+        livePath + "/" + node1,
+        Utils.toJSON(Map.<String, Object>of(LIVE_NODE_SOLR_VERSION, "888.0.0")),
+        CreateMode.EPHEMERAL);
+
+    var lowestVersion1 = reader.fetchLowestSolrVersion();
+    assertTrue(
+        "Expected lowest version to be present for high version node", lowestVersion1.isPresent());
+    assertEquals("after high node", SolrVersion.valueOf("888.0.0"), lowestVersion1.get());
+
+    String node2 = "node2_solr";
+    zkClient.create(livePath + "/" + node2, new byte[0], CreateMode.EPHEMERAL);
+
+    var lowestVersion2 = reader.fetchLowestSolrVersion();
+    assertTrue("Expected lowest version to be present for empty node", lowestVersion2.isPresent());
+    assertEquals("after empty node", SolrVersion.valueOf("9.9.0"), lowestVersion2.get());
+  }
+
+  /** Test when no live nodes exist - should return empty Optional */
+  public void testFetchLowestSolrVersion_noLiveNodes() throws Exception {
+    SolrZkClient zkClient = fixture.zkClient;
+    ZkStateReader reader = fixture.reader;
+    String livePath = ZkStateReader.LIVE_NODES_ZKNODE;
+
+    // Clear any existing live node children.
+    List<String> nodes = zkClient.getChildren(livePath, null);
+    for (String node : nodes) {
+      zkClient.delete(livePath + "/" + node, -1);
+    }
+
+    var lowestVersion = reader.fetchLowestSolrVersion();
+    assertFalse("Expected no lowest version when no live nodes exist", lowestVersion.isPresent());
+  }
+
+  public void testGetUrlScheme_validSystemProperty() {
+    String expectedUrlScheme = isSSLMode() ? "https" : "http";
+    assertEquals(expectedUrlScheme, fixture.reader.getUrlScheme());
+  }
+
+  public void testGetUrlScheme_noClusterAndSystemProperty() {
+    assumeFalse("Skip the test when ssl is enabled", isSSLMode());
+    assertEquals("http", fixture.reader.getUrlScheme());
   }
 }
