@@ -19,14 +19,12 @@ package org.apache.solr.core;
 
 import static org.apache.solr.core.TestConfigSets.solrxml;
 
-import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.cloud.ZkSolrResourceLoader;
@@ -40,12 +38,12 @@ public class TestConfLoadPerf extends SolrTestCaseJ4 {
   @Ignore
   @SuppressForbidden(reason = "Needed to provide time for tests.")
   public void testPerf() throws Exception {
-    String sourceHome = ExternalPaths.SOURCE_HOME;
-    File configSetDir =
-        new File(sourceHome, "server/solr/configsets/sample_techproducts_configs/conf");
+    Path sourceHome = ExternalPaths.SOURCE_HOME;
+    Path configSetDir =
+        sourceHome.resolve("server/solr/configsets/sample_techproducts_configs/conf");
 
     String configSetsBaseDir = TEST_PATH().resolve("configsets").toString();
-    byte[] b = Files.readAllBytes(new File(configSetDir, "solrconfig.xml").toPath());
+    byte[] b = Files.readAllBytes(configSetDir.resolve("solrconfig.xml"));
     Path testDirectory = createTempDir();
 
     System.setProperty("configsets", configSetsBaseDir);
@@ -56,14 +54,11 @@ public class TestConfLoadPerf extends SolrTestCaseJ4 {
 
     SolrResourceLoader srl =
         new SolrResourceLoader(
-            "temp",
-            Collections.emptyList(),
-            container.solrHome,
-            container.getResourceLoader().classLoader) {
+            "temp", List.of(), container.solrHome, container.getResourceLoader().classLoader) {
 
-          @Override
-          public CoreContainer getCoreContainer() {
-            return container;
+          // instance initializer block
+          {
+            setCoreContainer(container);
           }
 
           @Override
@@ -72,19 +67,20 @@ public class TestConfLoadPerf extends SolrTestCaseJ4 {
               Stat stat = new Stat();
               stat.setVersion(1);
               return new ZkSolrResourceLoader.ZkByteArrayInputStream(
-                  b, new File(configSetDir, "solrconfig.xml").getAbsolutePath(), stat);
+                  b, configSetDir.resolve("solrconfig.xml").toString(), stat);
             } else {
               throw new FileNotFoundException(resource);
             }
           }
         };
     System.gc();
+
     long heapSize = Runtime.getRuntime().totalMemory();
     List<SolrConfig> allConfigs = new ArrayList<>();
     long startTime = System.currentTimeMillis();
     int numReads = 100;
     for (int i = 0; i < numReads; i++) {
-      allConfigs.add(SolrConfig.readFromResourceLoader(srl, "solrconfig.xml", true, null));
+      allConfigs.add(SolrConfig.readFromResourceLoader(srl, "solrconfig.xml", null));
     }
     assertEquals(numReads, allConfigs.size());
     System.gc();
