@@ -25,14 +25,16 @@ import static org.apache.solr.filestore.TestDistribFileStore.checkAllNodesForFil
 import static org.apache.solr.filestore.TestDistribFileStore.readFile;
 import static org.apache.solr.filestore.TestDistribFileStore.uploadKey;
 
+import java.io.ByteArrayInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.Callable;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -41,15 +43,14 @@ import org.apache.lucene.analysis.core.WhitespaceTokenizerFactory;
 import org.apache.lucene.analysis.pattern.PatternReplaceCharFilterFactory;
 import org.apache.lucene.util.ResourceLoader;
 import org.apache.lucene.util.ResourceLoaderAware;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.RequestWriter;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.client.solrj.request.V2Request;
 import org.apache.solr.client.solrj.request.beans.PackagePayload;
@@ -57,28 +58,32 @@ import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.client.solrj.util.ClientUtils;
 import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.cloud.SolrCloudTestCase;
-import org.apache.solr.common.MapWriterMap;
 import org.apache.solr.common.NavigableObject;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.annotation.JsonProperty;
 import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.ReflectMapWriter;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.embedded.JettySolrRunner;
-import org.apache.solr.filestore.FileStoreAPI;
+import org.apache.solr.filestore.ClusterFileStore;
 import org.apache.solr.filestore.TestDistribFileStore;
 import org.apache.solr.handler.RequestHandlerBase;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
+import org.apache.solr.schema.FieldType;
+import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.search.QParser;
 import org.apache.solr.search.QParserPlugin;
 import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.util.LogLevel;
 import org.apache.solr.util.plugin.SolrCoreAware;
 import org.apache.zookeeper.data.Stat;
+import org.eclipse.jetty.client.ContentResponse;
+import org.eclipse.jetty.client.HttpClient;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -90,7 +95,7 @@ public class TestPackages extends SolrCloudTestCase {
   @Override
   public void setUp() throws Exception {
     super.setUp();
-    System.setProperty("enable.packages", "true");
+    System.setProperty("solr.packages.enabled", "true");
     configureCluster(4)
         .withJettyConfig(jetty -> jetty.enableV2(true))
         .addConfig("conf", configset("conf3"))
@@ -104,7 +109,6 @@ public class TestPackages extends SolrCloudTestCase {
     if (cluster != null) {
       cluster.shutdown();
     }
-    System.clearProperty("enable.packages");
 
     super.tearDown();
   }
@@ -121,7 +125,7 @@ public class TestPackages extends SolrCloudTestCase {
     String FILE1 = "/mypkg/runtimelibs.jar";
     String COLLECTION_NAME = "testCoreReloadingPluginColl";
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
-    uploadKey(derFile, FileStoreAPI.KEYS_DIR + "/pub_key512.der", cluster);
+    uploadKey(derFile, ClusterFileStore.KEYS_DIR + "/pub_key512.der", cluster);
     postFileAndWait(
         cluster,
         "runtimecode/runtimelibs.jar.bin",
@@ -136,7 +140,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -190,7 +194,7 @@ public class TestPackages extends SolrCloudTestCase {
     String EXPR1 = "/mypkg/expressible.jar";
     String COLLECTION_NAME = "testPluginLoadingColl";
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
-    uploadKey(derFile, FileStoreAPI.KEYS_DIR + "/pub_key512.der", cluster);
+    uploadKey(derFile, ClusterFileStore.KEYS_DIR + "/pub_key512.der", cluster);
     postFileAndWait(
         cluster,
         "runtimecode/runtimelibs.jar.bin",
@@ -217,7 +221,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -291,10 +295,12 @@ public class TestPackages extends SolrCloudTestCase {
         10,
         cluster.getSolrClient(),
         new GenericSolrRequest(
-            SolrRequest.METHOD.GET,
-            "/stream",
-            new MapSolrParams(
-                Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "action", "plugins"))),
+                SolrRequest.METHOD.GET,
+                "/stream",
+                SolrRequest.SolrRequestType.ADMIN,
+                new MapSolrParams(
+                    Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "action", "plugins")))
+            .setRequiresCollection(true),
         Map.of(":plugins:mincopy", "org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric"));
 
     UpdateRequest ur = new UpdateRequest();
@@ -405,7 +411,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .withMethod(SolrRequest.METHOD.POST)
             .forceV2(true)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
     delete.process(cluster.getSolrClient());
 
@@ -433,13 +439,14 @@ public class TestPackages extends SolrCloudTestCase {
 
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.add("collection", COLLECTION_NAME);
-    new GenericSolrRequest(SolrRequest.METHOD.POST, "/config/params", params) {
+    new GenericSolrRequest(
+        SolrRequest.METHOD.POST, "/config/params", SolrRequest.SolrRequestType.ADMIN, params) {
       @Override
       public RequestWriter.ContentWriter getContentWriter(String expectedType) {
         return new RequestWriter.StringPayloadContentWriter(
             "{set:{PKG_VERSIONS:{mypkg : '1.1'}}}", ClientUtils.TEXT_JSON);
       }
-    }.process(cluster.getSolrClient());
+    }.setRequiresCollection(true).process(cluster.getSolrClient());
 
     add.version = "2.1";
     add.files = Arrays.asList(new String[] {FILE3, URP2, EXPR1});
@@ -457,13 +464,14 @@ public class TestPackages extends SolrCloudTestCase {
     verifyComponent(
         cluster.getSolrClient(), COLLECTION_NAME, "requestHandler", "/runtime", "mypkg", "1.1");
 
-    new GenericSolrRequest(SolrRequest.METHOD.POST, "/config/params", params) {
+    new GenericSolrRequest(
+        SolrRequest.METHOD.POST, "/config/params", SolrRequest.SolrRequestType.ADMIN, params) {
       @Override
       public RequestWriter.ContentWriter getContentWriter(String expectedType) {
         return new RequestWriter.StringPayloadContentWriter(
             "{set:{PKG_VERSIONS:{mypkg : '2.1'}}}", ClientUtils.TEXT_JSON);
       }
-    }.process(cluster.getSolrClient());
+    }.setRequiresCollection(true).process(cluster.getSolrClient());
 
     // now, let's force every collection using 'mypkg' to refresh
     // so that it uses version 2.1
@@ -524,17 +532,16 @@ public class TestPackages extends SolrCloudTestCase {
       Utils.InputStreamConsumer<?> parser,
       Map<String, Object> expected)
       throws Exception {
-    try (HttpSolrClient client = (HttpSolrClient) jetty.newClient()) {
-      TestDistribFileStore.assertResponseValues(
-          10,
-          () -> {
-            Object o = Utils.executeGET(client.getHttpClient(), jetty.getBaseUrl() + uri, parser);
-            if (o instanceof NavigableObject) return (NavigableObject) o;
-            if (o instanceof Map) return new MapWriterMap((Map<String, Object>) o);
-            throw new RuntimeException("Unknown response");
-          },
-          expected);
-    }
+    HttpClient httpClient = jetty.getSolrClient().getHttpClient();
+    TestDistribFileStore.assertResponseValues(
+        10,
+        () -> {
+          ContentResponse rsp = httpClient.GET(jetty.getBaseUrl() + uri);
+          try (InputStream is = new ByteArrayInputStream(rsp.getContent())) {
+            return NavigableObject.wrap(parser.accept(is));
+          }
+        },
+        expected);
   }
 
   private void verifyComponent(
@@ -557,12 +564,15 @@ public class TestPackages extends SolrCloudTestCase {
                 "meta",
                 "true"));
 
-    GenericSolrRequest req1 =
-        new GenericSolrRequest(SolrRequest.METHOD.GET, "/config/" + componentType, params);
     TestDistribFileStore.assertResponseValues(
         10,
         client,
-        req1,
+        new GenericSolrRequest(
+                SolrRequest.METHOD.GET,
+                "/config/" + componentType,
+                SolrRequest.SolrRequestType.ADMIN,
+                params)
+            .setRequiresCollection(true),
         Map.of(
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:package", pkg,
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:version", version));
@@ -571,7 +581,7 @@ public class TestPackages extends SolrCloudTestCase {
   @Test
   @SuppressWarnings("unchecked")
   public void testAPI() throws Exception {
-    String errPath = "/error/details[0]/errorMessages[0]";
+    String errPath = "/details[0]/errorMessages[0]";
     String FILE1 = "/mypkg/v.0.12/jar_a.jar";
     String FILE2 = "/mypkg/v.0.12/jar_b.jar";
     String FILE3 = "/mypkg/v.0.13/jar_a.jar";
@@ -584,7 +594,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     // the files are not yet there. The command should fail with error saying "No such file"
@@ -593,11 +603,11 @@ public class TestPackages extends SolrCloudTestCase {
     // post the jar file. No signature is sent
     postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1, null);
 
-    add.files = Collections.singletonList(FILE1);
+    add.files = List.of(FILE1);
     expectError(req, cluster.getSolrClient(), errPath, FILE1 + " has no signature");
     // now we upload the keys
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
-    uploadKey(derFile, FileStoreAPI.KEYS_DIR + "/pub_key512.der", cluster);
+    uploadKey(derFile, ClusterFileStore.KEYS_DIR + "/pub_key512.der", cluster);
     // and upload the same file with a different name, but it has proper signature
     postFileAndWait(
         cluster,
@@ -606,7 +616,7 @@ public class TestPackages extends SolrCloudTestCase {
         "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
     // with correct signature
     // after uploading the file, let's delete the keys to see if we get proper error message
-    add.files = Collections.singletonList(FILE2);
+    add.files = List.of(FILE2);
     /*expectError(req, cluster.getSolrClient(), errPath,
     "ZooKeeper does not have any public keys");*/
 
@@ -620,10 +630,8 @@ public class TestPackages extends SolrCloudTestCase {
     TestDistribFileStore.assertResponseValues(
         1,
         () ->
-            new MapWriterMap(
-                (Map<String, Object>)
-                    Utils.fromJSON(
-                        cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+            NavigableObject.wrap(
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[0]:version", "0.12", ":packages:test_pkg[0]:files[0]", FILE2));
 
     // post a new jar with a proper signature
@@ -636,7 +644,7 @@ public class TestPackages extends SolrCloudTestCase {
     // this time we are adding the second version of the package (0.13)
     add.version = "0.13";
     add.pkg = "test_pkg";
-    add.files = Collections.singletonList(FILE3);
+    add.files = List.of(FILE3);
 
     // this request should succeed
     req.process(cluster.getSolrClient());
@@ -644,10 +652,8 @@ public class TestPackages extends SolrCloudTestCase {
     TestDistribFileStore.assertResponseValues(
         1,
         () ->
-            new MapWriterMap(
-                (Map<String, Object>)
-                    Utils.fromJSON(
-                        cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+            NavigableObject.wrap(
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[1]:version", "0.13", ":packages:test_pkg[1]:files[0]", FILE3));
 
     // Now we will just delete one version
@@ -658,7 +664,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
 
     // we are expecting an error
@@ -670,26 +676,22 @@ public class TestPackages extends SolrCloudTestCase {
     TestDistribFileStore.assertResponseValues(
         1,
         () ->
-            new MapWriterMap(
-                (Map<String, Object>)
-                    Utils.fromJSON(
-                        cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+            NavigableObject.wrap(
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[0]:version", "0.13", ":packages:test_pkg[0]:files[0]", FILE3));
 
     // So far we have been verifying the details with  ZK directly
     // use the package read API to verify with each node that it has the correct data
     for (JettySolrRunner jetty : cluster.getJettySolrRunners()) {
-      String path =
-          jetty.getBaseUrl().toString().replace("/solr", "/api") + "/cluster/package?wt=javabin";
+      String path = jetty.getBaseURLV2().toString() + "/cluster/package?wt=javabin";
       TestDistribFileStore.assertResponseValues(
           10,
           new Callable<NavigableObject>() {
             @Override
             public NavigableObject call() throws Exception {
-              try (HttpSolrClient solrClient = (HttpSolrClient) jetty.newClient()) {
-                return (NavigableObject)
-                    Utils.executeGET(solrClient.getHttpClient(), path, Utils.JAVABINCONSUMER);
-              }
+              HttpClient solrClient = jetty.getSolrClient().getHttpClient();
+              byte[] bytes = solrClient.GET(path).getContent();
+              return (NavigableObject) new JavaBinCodec().unmarshal(bytes);
             }
           },
           Map.of(
@@ -742,9 +744,11 @@ public class TestPackages extends SolrCloudTestCase {
     String COLLECTION_NAME = "testSchemaLoadingColl";
     System.setProperty("managed.schema.mutable", "true");
 
+    IndexSchema[] schemas = new IndexSchema[2]; // tracks schemas for a selected core
+
     String FILE1 = "/schemapkg/schema-plugins.jar";
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
-    uploadKey(derFile, FileStoreAPI.KEYS_DIR + "/pub_key512.der", cluster);
+    uploadKey(derFile, ClusterFileStore.KEYS_DIR + "/pub_key512.der", cluster);
     postFileAndWait(
         cluster,
         "runtimecode/schema-plugins.jar.bin",
@@ -758,6 +762,7 @@ public class TestPackages extends SolrCloudTestCase {
         FILE2,
         "gI6vYUDmSXSXmpNEeK1cwqrp4qTeVQgizGQkd8A4Prx2K8k7c5QlXbcs4lxFAAbbdXz9F4esBqTCiLMjVDHJ5Q==");
 
+    // upload package v1.0
     PackagePayload.AddVersion add = new PackagePayload.AddVersion();
     add.version = "1.0";
     add.pkg = "schemapkg";
@@ -766,7 +771,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -787,27 +792,28 @@ public class TestPackages extends SolrCloudTestCase {
         .process(cluster.getSolrClient());
     cluster.waitForActiveCollection(COLLECTION_NAME, 2, 4);
 
-    verifySchemaComponent(
-        cluster.getSolrClient(),
-        COLLECTION_NAME,
-        "/schema/fieldtypes/myNewTextFieldWithAnalyzerClass",
-        Map.of(
-            ":fieldType:analyzer:charFilters[0]:_packageinfo_:version",
-            "1.0",
-            ":fieldType:analyzer:tokenizer:_packageinfo_:version",
-            "1.0",
-            ":fieldType:_packageinfo_:version",
-            "1.0"));
+    // make note of the schema instance for one of the cores
+    SolrCore.Provider coreProvider =
+        cluster.getJettySolrRunners().stream()
+            .flatMap(
+                jetty ->
+                    jetty.getCoreContainer().getAllCoreNames().stream()
+                        .map(name -> new SolrCore.Provider(jetty.getCoreContainer(), name, null)))
+            .findFirst()
+            .orElseThrow();
 
+    coreProvider.withCore(core -> schemas[0] = core.getLatestSchema());
+
+    // upload package v2.0
     add = new PackagePayload.AddVersion();
     add.version = "2.0";
     add.pkg = "schemapkg";
-    add.files = Arrays.asList(FILE1);
+    add.files = Arrays.asList(FILE1, FILE2);
     req =
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -824,27 +830,30 @@ public class TestPackages extends SolrCloudTestCase {
             ":result:packages:schemapkg[1]:files[0]",
             FILE1));
 
-    verifySchemaComponent(
-        cluster.getSolrClient(),
-        COLLECTION_NAME,
-        "/schema/fieldtypes/myNewTextFieldWithAnalyzerClass",
-        Map.of(
-            ":fieldType:analyzer:charFilters[0]:_packageinfo_:version",
-            "2.0",
-            ":fieldType:analyzer:tokenizer:_packageinfo_:version",
-            "2.0",
-            ":fieldType:_packageinfo_:version",
-            "2.0"));
-  }
+    // even though package version 2.0 uses exactly the same files
+    // as version 1.0, the core schema should still reload, and
+    // the core should be associated with a different schema instance
+    TestDistribFileStore.assertResponseValues(
+        10,
+        () -> {
+          coreProvider.withCore(core -> schemas[1] = core.getLatestSchema());
+          return params("schemaReloaded", (schemas[0] != schemas[1]) ? "yes" : "no");
+        },
+        Map.of("schemaReloaded", "yes"));
 
-  private void verifySchemaComponent(
-      SolrClient client, String COLLECTION_NAME, String path, Map<String, Object> expected)
-      throws Exception {
-    SolrParams params =
-        new MapSolrParams(Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "meta", "true"));
+    // after the reload, the custom field type class now comes from package v2.0
+    String fieldTypeName = "myNewTextFieldWithAnalyzerClass";
 
-    GenericSolrRequest req = new GenericSolrRequest(SolrRequest.METHOD.GET, path, params);
-    TestDistribFileStore.assertResponseValues(10, client, req, expected);
+    FieldType fieldTypeV1 = schemas[0].getFieldTypeByName(fieldTypeName);
+    assertEquals("my.pkg.MyTextField", fieldTypeV1.getClass().getCanonicalName());
+
+    FieldType fieldTypeV2 = schemas[1].getFieldTypeByName(fieldTypeName);
+    assertEquals("my.pkg.MyTextField", fieldTypeV2.getClass().getCanonicalName());
+
+    assertNotEquals(
+        "my.pkg.MyTextField classes should be from different classloaders",
+        fieldTypeV1.getClass(),
+        fieldTypeV2.getClass());
   }
 
   public static void postFileAndWait(
@@ -865,8 +874,11 @@ public class TestPackages extends SolrCloudTestCase {
     try {
       req.process(client);
       fail("should have failed with message : " + expectErrorMsg);
-    } catch (BaseHttpSolrClient.RemoteExecutionException e) {
-      String msg = e.getMetaData()._getStr(errPath, "");
+    } catch (RemoteSolrException e) {
+      String msg =
+          Objects.requireNonNullElse(
+                  Utils.getObjectByPath(e.getRemoteErrorObject(), false, errPath), "")
+              .toString();
       assertTrue(
           "should have failed with message: " + expectErrorMsg + "actual message : " + msg,
           msg.contains(expectErrorMsg));
