@@ -17,7 +17,6 @@
 package org.apache.solr.uninverting;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -37,6 +36,7 @@ import org.apache.lucene.index.DocValuesType;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.FieldInfos;
 import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.IndexWriterConfig;
 import org.apache.lucene.index.LeafReader;
 import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.SortedSetDocValues;
@@ -50,12 +50,19 @@ import org.apache.solr.legacy.LegacyIntField;
 import org.apache.solr.legacy.LegacyLongField;
 import org.apache.solr.legacy.LegacyNumericUtils;
 import org.apache.solr.uninverting.UninvertingReader.Type;
+import org.apache.solr.util.RandomMergePolicy;
 
 public class TestUninvertingReader extends SolrTestCase {
 
+  private static IndexWriterConfig newIndexConfig() {
+    // don't allow random doc re-orders; this test isn't tolerant to that
+    final var allowMockMP = false;
+    return newIndexWriterConfig(null).setMergePolicy(new RandomMergePolicy(allowMockMP));
+  }
+
   public void testSortedSetInteger() throws IOException {
     Directory dir = newDirectory();
-    IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    IndexWriter iw = new IndexWriter(dir, newIndexConfig());
 
     Document doc = new Document();
     doc.add(new LegacyIntField("foo", 5, Field.Store.NO));
@@ -70,20 +77,19 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_INTEGER));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_INTEGER));
     LeafReader ar = ir.leaves().get(0).reader();
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
     assertEquals(2, v.getValueCount());
 
     assertEquals(0, v.nextDoc());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(1, v.docValueCount());
 
     assertEquals(1, v.nextDoc());
     assertEquals(0, v.nextOrd());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(2, v.docValueCount());
 
     BytesRef value = v.lookupOrd(0);
     assertEquals(-3, LegacyNumericUtils.prefixCodedToInt(value));
@@ -97,7 +103,7 @@ public class TestUninvertingReader extends SolrTestCase {
 
   public void testSortedSetFloat() throws IOException {
     Directory dir = newDirectory();
-    IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    IndexWriter iw = new IndexWriter(dir, newIndexConfig());
 
     Document doc = new Document();
     doc.add(new LegacyIntField("foo", Float.floatToRawIntBits(5f), Field.Store.NO));
@@ -112,8 +118,7 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_FLOAT));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_FLOAT));
     LeafReader ar = ir.leaves().get(0).reader();
 
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
@@ -121,12 +126,12 @@ public class TestUninvertingReader extends SolrTestCase {
 
     assertEquals(0, v.nextDoc());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(1, v.docValueCount());
 
     assertEquals(1, v.nextDoc());
     assertEquals(0, v.nextOrd());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(2, v.docValueCount());
 
     BytesRef value = v.lookupOrd(0);
     assertEquals(Float.floatToRawIntBits(-3f), LegacyNumericUtils.prefixCodedToInt(value));
@@ -140,7 +145,7 @@ public class TestUninvertingReader extends SolrTestCase {
 
   public void testSortedSetLong() throws IOException {
     Directory dir = newDirectory();
-    IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    IndexWriter iw = new IndexWriter(dir, newIndexConfig());
 
     Document doc = new Document();
     doc.add(new LegacyLongField("foo", 5, Field.Store.NO));
@@ -155,20 +160,19 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_LONG));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_LONG));
     LeafReader ar = ir.leaves().get(0).reader();
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
     assertEquals(2, v.getValueCount());
 
     assertEquals(0, v.nextDoc());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(1, v.docValueCount());
 
     assertEquals(1, v.nextDoc());
     assertEquals(0, v.nextOrd());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(2, v.docValueCount());
 
     BytesRef value = v.lookupOrd(0);
     assertEquals(-3, LegacyNumericUtils.prefixCodedToLong(value));
@@ -182,7 +186,7 @@ public class TestUninvertingReader extends SolrTestCase {
 
   public void testSortedSetDouble() throws IOException {
     Directory dir = newDirectory();
-    IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    IndexWriter iw = new IndexWriter(dir, newIndexConfig());
 
     Document doc = new Document();
     doc.add(new LegacyLongField("foo", Double.doubleToRawLongBits(5d), Field.Store.NO));
@@ -197,20 +201,19 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_DOUBLE));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_DOUBLE));
     LeafReader ar = ir.leaves().get(0).reader();
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
     assertEquals(2, v.getValueCount());
 
     assertEquals(0, v.nextDoc());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(1, v.docValueCount());
 
     assertEquals(1, v.nextDoc());
     assertEquals(0, v.nextOrd());
     assertEquals(1, v.nextOrd());
-    assertEquals(SortedSetDocValues.NO_MORE_ORDS, v.nextOrd());
+    assertEquals(2, v.docValueCount());
 
     BytesRef value = v.lookupOrd(0);
     assertEquals(Double.doubleToRawLongBits(-3d), LegacyNumericUtils.prefixCodedToLong(value));
@@ -227,7 +230,7 @@ public class TestUninvertingReader extends SolrTestCase {
    */
   public void testSortedSetIntegerManyValues() throws IOException {
     final Directory dir = newDirectory();
-    final IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    final IndexWriter iw = new IndexWriter(dir, newIndexConfig());
 
     final LegacyFieldType NO_TRIE_TYPE = new LegacyFieldType(LegacyIntField.TYPE_NOT_STORED);
     NO_TRIE_TYPE.setNumericPrecisionStep(Integer.MAX_VALUE);
@@ -328,7 +331,7 @@ public class TestUninvertingReader extends SolrTestCase {
 
   public void testSortedSetEmptyIndex() throws IOException {
     final Directory dir = newDirectory();
-    final IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    final IndexWriter iw = new IndexWriter(dir, newIndexConfig());
     iw.close();
 
     final Map<String, Type> UNINVERT_MAP = new LinkedHashMap<>();
@@ -364,7 +367,7 @@ public class TestUninvertingReader extends SolrTestCase {
 
   public void testFieldInfos() throws IOException {
     Directory dir = newDirectory();
-    IndexWriter iw = new IndexWriter(dir, newIndexWriterConfig(null));
+    IndexWriter iw = new IndexWriter(dir, newIndexConfig());
 
     Document doc = new Document();
     BytesRef idBytes = new BytesRef("id");
