@@ -21,17 +21,19 @@ import java.io.IOException;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import org.apache.solr.client.solrj.SolrRequest.METHOD;
 import org.apache.solr.client.solrj.beans.DocumentObjectBinder;
-import org.apache.solr.client.solrj.impl.StreamingBinaryResponseParser;
 import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.client.solrj.request.SolrPing;
 import org.apache.solr.client.solrj.request.UpdateRequest;
+import org.apache.solr.client.solrj.response.FastStreamingDocsCallback;
 import org.apache.solr.client.solrj.response.QueryResponse;
+import org.apache.solr.client.solrj.response.ResponseParser;
 import org.apache.solr.client.solrj.response.SolrPingResponse;
+import org.apache.solr.client.solrj.response.StreamingJavaBinResponseParser;
+import org.apache.solr.client.solrj.response.StreamingResponseCallback;
 import org.apache.solr.client.solrj.response.UpdateResponse;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrDocumentList;
@@ -51,7 +53,6 @@ public abstract class SolrClient implements Serializable, Closeable {
 
   private static final long serialVersionUID = 1L;
 
-  private DocumentObjectBinder binder;
   protected String defaultCollection;
 
   /**
@@ -260,7 +261,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    */
   public UpdateResponse addBean(String collection, Object obj, int commitWithinMs)
       throws IOException, SolrServerException {
-    return add(collection, getBinder().toSolrInputDocument(obj), commitWithinMs);
+    return add(collection, DocumentObjectBinder.INSTANCE.toSolrInputDocument(obj), commitWithinMs);
   }
 
   /**
@@ -276,7 +277,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    */
   public UpdateResponse addBean(Object obj, int commitWithinMs)
       throws IOException, SolrServerException {
-    return add(null, getBinder().toSolrInputDocument(obj), commitWithinMs);
+    return add(null, DocumentObjectBinder.INSTANCE.toSolrInputDocument(obj), commitWithinMs);
   }
 
   /**
@@ -323,15 +324,14 @@ public abstract class SolrClient implements Serializable, Closeable {
    * @return an {@link org.apache.solr.client.solrj.response.UpdateResponse} from the server
    * @throws IOException if there is a communication error with the server
    * @throws SolrServerException if there is an error on the server
-   * @see SolrClient#getBinder()
+   * @see DocumentObjectBinder
    * @since solr 5.1
    */
   public UpdateResponse addBeans(String collection, Collection<?> beans, int commitWithinMs)
       throws SolrServerException, IOException {
-    DocumentObjectBinder binder = this.getBinder();
     ArrayList<SolrInputDocument> docs = new ArrayList<>(beans.size());
     for (Object bean : beans) {
-      docs.add(binder.toSolrInputDocument(bean));
+      docs.add(DocumentObjectBinder.INSTANCE.toSolrInputDocument(bean));
     }
     return add(collection, docs, commitWithinMs);
   }
@@ -347,7 +347,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    * @return an {@link org.apache.solr.client.solrj.response.UpdateResponse} from the server
    * @throws IOException if there is a communication error with the server
    * @throws SolrServerException if there is an error on the server
-   * @see SolrClient#getBinder()
+   * @see DocumentObjectBinder
    * @since solr 3.5
    */
   public UpdateResponse addBeans(Collection<?> beans, int commitWithinMs)
@@ -379,7 +379,7 @@ public abstract class SolrClient implements Serializable, Closeable {
           public SolrInputDocument next() {
             Object o = beanIterator.next();
             if (o == null) return null;
-            return getBinder().toSolrInputDocument(o);
+            return DocumentObjectBinder.INSTANCE.toSolrInputDocument(o);
           }
 
           @Override
@@ -544,7 +544,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    *
    * <p>Note: In most cases it is not required to do explicit optimize
    *
-   * @param collection the Solr collection to send the optimize to
+   * @param collection the Solr collection to send the optimize command to
    * @return an {@link org.apache.solr.client.solrj.response.UpdateResponse} containing the response
    *     from the server
    * @throws IOException If there is a low-level I/O error.
@@ -575,7 +575,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    *
    * <p>Note: In most cases it is not required to do explicit optimize
    *
-   * @param collection the Solr collection to send the optimize to
+   * @param collection the Solr collection to send the optimize command to
    * @param waitFlush block until index changes are flushed to disk
    * @param waitSearcher block until a new searcher is opened and registered as the main query
    *     searcher, making the changes visible
@@ -612,7 +612,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    *
    * <p>Note: In most cases it is not required to do explicit optimize
    *
-   * @param collection the Solr collection to send the optimize to
+   * @param collection the Solr collection to send the optimize command to
    * @param waitFlush block until index changes are flushed to disk
    * @param waitSearcher block until a new searcher is opened and registered as the main query
    *     searcher, making the changes visible
@@ -973,7 +973,7 @@ public abstract class SolrClient implements Serializable, Closeable {
 
   /**
    * Query solr, and stream the results. Unlike the standard query, this will send events for each
-   * Document rather then add them to the QueryResponse.
+   * Document rather than add them to the QueryResponse.
    *
    * <p>Although this function returns a 'QueryResponse' it should be used with care since it
    * excludes anything that was passed to callback. Also note that future version may pass even more
@@ -991,21 +991,21 @@ public abstract class SolrClient implements Serializable, Closeable {
   public QueryResponse queryAndStreamResponse(
       String collection, SolrParams params, StreamingResponseCallback callback)
       throws SolrServerException, IOException {
-    return getQueryResponse(collection, params, new StreamingBinaryResponseParser(callback));
+    return getQueryResponse(collection, params, new StreamingJavaBinResponseParser(callback));
   }
 
   public QueryResponse queryAndStreamResponse(
       String collection, SolrParams params, FastStreamingDocsCallback callback)
       throws SolrServerException, IOException {
-    return getQueryResponse(collection, params, new StreamingBinaryResponseParser(callback));
+    return getQueryResponse(collection, params, new StreamingJavaBinResponseParser(callback));
   }
 
   private QueryResponse getQueryResponse(
       String collection, SolrParams params, ResponseParser parser)
       throws SolrServerException, IOException {
     QueryRequest req = new QueryRequest(params);
-    if (parser instanceof StreamingBinaryResponseParser) {
-      req.setStreamingResponseCallback(((StreamingBinaryResponseParser) parser).callback);
+    if (parser instanceof StreamingJavaBinResponseParser) {
+      req.setStreamingResponseCallback(((StreamingJavaBinResponseParser) parser).callback);
     }
     req.setResponseParser(parser);
     return req.process(this, collection);
@@ -1013,7 +1013,7 @@ public abstract class SolrClient implements Serializable, Closeable {
 
   /**
    * Query solr, and stream the results. Unlike the standard query, this will send events for each
-   * Document rather then add them to the QueryResponse.
+   * Document rather than add them to the QueryResponse.
    *
    * <p>Although this function returns a 'QueryResponse' it should be used with care since it
    * excludes anything that was passed to callback. Also note that future version may pass even more
@@ -1071,7 +1071,7 @@ public abstract class SolrClient implements Serializable, Closeable {
    */
   public SolrDocument getById(String collection, String id, SolrParams params)
       throws SolrServerException, IOException {
-    SolrDocumentList docs = getById(collection, Collections.singletonList(id), params);
+    SolrDocumentList docs = getById(collection, List.of(id), params);
     if (!docs.isEmpty()) {
       return docs.get(0);
     }
@@ -1182,7 +1182,7 @@ public abstract class SolrClient implements Serializable, Closeable {
       throws SolrServerException, IOException;
 
   /**
-   * Execute a request against a Solr server
+   * Execute a request against a Solr server using the default collection
    *
    * @param request the request to execute
    * @return a {@link NamedList} containing the response from the server
@@ -1195,24 +1195,11 @@ public abstract class SolrClient implements Serializable, Closeable {
   }
 
   /**
-   * Get the {@link org.apache.solr.client.solrj.beans.DocumentObjectBinder} for this client.
-   *
-   * @return a DocumentObjectBinder
-   * @see SolrClient#addBean
-   * @see SolrClient#addBeans
-   */
-  public DocumentObjectBinder getBinder() {
-    if (binder == null) {
-      binder = new DocumentObjectBinder();
-    }
-    return binder;
-  }
-
-  /**
    * This method defines the context in which this Solr client is being used (e.g. for internal
    * communication between Solr nodes or as an external client). The default value is {@code
    * SolrClientContext#Client}
    */
+  @Deprecated(since = "10.1") // TODO replace or refactor; see SOLR-14720 related
   public SolrRequest.SolrClientContext getContext() {
     return SolrRequest.SolrClientContext.CLIENT;
   }
@@ -1224,5 +1211,11 @@ public abstract class SolrClient implements Serializable, Closeable {
    */
   public String getDefaultCollection() {
     return defaultCollection;
+  }
+
+  /** A lambda intended for invoking SolrClient operations */
+  @FunctionalInterface
+  public interface SolrClientFunction<C extends SolrClient, R> {
+    R apply(C c) throws IOException, SolrServerException;
   }
 }
