@@ -20,22 +20,23 @@ import static org.apache.solr.common.util.Utils.STANDARDOBJBUILDER;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.time.Instant;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.DocCollection.CollectionStateProps;
-import org.apache.solr.common.cloud.Replica.ReplicaStateProps;
 import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.Utils;
 import org.noggit.JSONParser;
@@ -48,6 +49,8 @@ import org.slf4j.LoggerFactory;
  * Immutable state of the cloud. Normally you can get the state by using {@code
  * ZkStateReader#getClusterState()}.
  *
+ * <p>However, the {@link #setLiveNodes list of live nodes} is updated when nodes go up and down.
+ *
  * @lucene.experimental
  */
 public class ClusterState implements MapWriter {
@@ -58,8 +61,7 @@ public class ClusterState implements MapWriter {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private final Map<String, CollectionRef> collectionStates, immutableCollectionStates;
-  private Set<String> liveNodes;
-  private Set<String> hostAllowList;
+  private volatile Set<String> liveNodes;
 
   /** Use this constr when ClusterState is meant for consumption. */
   public ClusterState(Set<String> liveNodes, Map<String, DocCollection> collectionStates) {
@@ -80,8 +82,7 @@ public class ClusterState implements MapWriter {
    * loaded (parameter order different from constructor above to have different erasures)
    */
   public ClusterState(Map<String, CollectionRef> collectionStates, Set<String> liveNodes) {
-    this.liveNodes = CollectionUtil.newHashSet(liveNodes.size());
-    this.liveNodes.addAll(liveNodes);
+    setLiveNodes(liveNodes);
     this.collectionStates = new LinkedHashMap<>(collectionStates);
     this.immutableCollectionStates = Collections.unmodifiableMap(this.collectionStates);
   }
@@ -92,6 +93,7 @@ public class ClusterState implements MapWriter {
    * @param collectionName the name of the modified (or deleted) collection
    * @param collection the collection object. A null value deletes the collection from the state
    * @return the updated cluster state which preserves the current live nodes
+   * @lucene.internal
    */
   public ClusterState copyWith(String collectionName, DocCollection collection) {
     LinkedHashMap<String, CollectionRef> collections = new LinkedHashMap<>(collectionStates);
@@ -151,56 +153,34 @@ public class ClusterState implements MapWriter {
   }
 
   /**
-   * Get a map of collection name vs DocCollection objects
-   *
-   * <p>Implementation note: This method resolves the collection reference by calling {@link
-   * CollectionRef#get()} which can make a call to ZooKeeper. This is necessary because the
-   * semantics of how collection list is loaded have changed in SOLR-6629.
-   *
-   * @return a map of collection name vs DocCollection object
+   * The collection names. Like a Set but might not implement it. Immutable; non-null. Some names
+   * returned might not resolve via {@link #getCollectionOrNull(String)}, so consider this a close
+   * approximation.
    */
-  public Map<String, DocCollection> getCollectionsMap() {
-    Map<String, DocCollection> result = CollectionUtil.newHashMap(collectionStates.size());
-    for (Entry<String, CollectionRef> entry : collectionStates.entrySet()) {
-      DocCollection collection = entry.getValue().get();
-      if (collection != null) {
-        result.put(entry.getKey(), collection);
-      }
-    }
-    return result;
+  public Collection<String> getCollectionNames() {
+    // should we document we are sorted too?  Albeit that ties our hands.
+    return immutableCollectionStates.keySet();
   }
 
   /** Get names of the currently live nodes. */
   public Set<String> getLiveNodes() {
-    return Collections.unmodifiableSet(liveNodes);
+    return liveNodes;
   }
 
-  public String getShardId(String nodeName, String coreName) {
-    return getShardId(null, nodeName, coreName);
-  }
-
-  public String getShardId(String collectionName, String nodeName, String coreName) {
-    Collection<CollectionRef> states = collectionStates.values();
-    if (collectionName != null) {
-      CollectionRef c = collectionStates.get(collectionName);
-      if (c != null) states = Collections.singletonList(c);
-    }
-
-    for (CollectionRef ref : states) {
-      DocCollection coll = ref.get();
-      if (coll == null) continue; // this collection go tremoved in between, skip
-      for (Slice slice : coll.getSlices()) {
-        for (Replica replica : slice.getReplicas()) {
-          // TODO: for really large clusters, we could 'index' on this
-          String rnodeName = replica.getStr(ReplicaStateProps.NODE_NAME);
-          String rcore = replica.getStr(ReplicaStateProps.CORE_NAME);
-          if (nodeName.equals(rnodeName) && coreName.equals(rcore)) {
-            return slice.getName();
-          }
-        }
-      }
-    }
-    return null;
+  @Deprecated
+  public Map<String, List<Replica>> getReplicaNamesPerCollectionOnNode(final String nodeName) {
+    Map<String, List<Replica>> replicaNamesPerCollectionOnNode = new HashMap<>();
+    collectionStates.values().stream()
+        .map(CollectionRef::get)
+        .filter(Objects::nonNull)
+        .forEach(
+            col -> {
+              List<Replica> replicas = col.getReplicasOnNode(nodeName);
+              if (!replicas.isEmpty()) {
+                replicaNamesPerCollectionOnNode.put(col.getName(), replicas);
+              }
+            });
+    return replicaNamesPerCollectionOnNode;
   }
 
   /** Check if node is alive. */
@@ -225,28 +205,32 @@ public class ClusterState implements MapWriter {
    *     Json representation of a {@link DocCollection} as written by {@link #write(JSONWriter)}. It
    *     can represent one or more collections.
    * @param liveNodes list of live nodes
+   * @param creationTime assigns this date to all {@link DocCollection} referenced by the returned
+   *     {@link ClusterState}
    * @return the ClusterState
    */
+  @Deprecated
   public static ClusterState createFromJson(
-      int version, byte[] bytes, Set<String> liveNodes, DocCollection.PrsSupplier prsSupplier) {
+      int version,
+      byte[] bytes,
+      Set<String> liveNodes,
+      Instant creationTime,
+      DocCollection.PrsSupplier prsSupplier) {
     if (bytes == null || bytes.length == 0) {
-      return new ClusterState(liveNodes, Collections.<String, DocCollection>emptyMap());
+      return new ClusterState(liveNodes, Map.of());
     }
     @SuppressWarnings({"unchecked"})
     Map<String, Object> stateMap =
         (Map<String, Object>) Utils.fromJSON(bytes, 0, bytes.length, STR_INTERNER_OBJ_BUILDER);
-    return createFromCollectionMap(version, stateMap, liveNodes, prsSupplier);
+    return createFromCollectionMap(version, stateMap, liveNodes, creationTime, prsSupplier);
   }
 
   @Deprecated
-  public static ClusterState createFromJson(int version, byte[] bytes, Set<String> liveNodes) {
-    return createFromJson(version, bytes, liveNodes, null);
-  }
-
   public static ClusterState createFromCollectionMap(
       int version,
       Map<String, Object> stateMap,
       Set<String> liveNodes,
+      Instant creationTime,
       DocCollection.PrsSupplier prsSupplier) {
     Map<String, CollectionRef> collections = CollectionUtil.newLinkedHashMap(stateMap.size());
     for (Entry<String, Object> entry : stateMap.entrySet()) {
@@ -254,22 +238,27 @@ public class ClusterState implements MapWriter {
       @SuppressWarnings({"unchecked"})
       DocCollection coll =
           collectionFromObjects(
-              collectionName, (Map<String, Object>) entry.getValue(), version, prsSupplier);
+              collectionName,
+              (Map<String, Object>) entry.getValue(),
+              version,
+              creationTime,
+              prsSupplier);
       collections.put(collectionName, new CollectionRef(coll));
     }
 
     return new ClusterState(collections, liveNodes);
   }
 
-  @Deprecated
-  public static ClusterState createFromCollectionMap(
-      int version, Map<String, Object> stateMap, Set<String> liveNodes) {
-    return createFromCollectionMap(version, stateMap, liveNodes, null);
-  }
-
+  /**
+   * @lucene.internal
+   */
   // TODO move to static DocCollection.loadFromMap
   public static DocCollection collectionFromObjects(
-      String name, Map<String, Object> objs, int version, DocCollection.PrsSupplier prsSupplier) {
+      String name,
+      Map<String, Object> objs,
+      int version,
+      Instant creationTime,
+      DocCollection.PrsSupplier prsSupplier) {
     Map<String, Object> props;
     Map<String, Slice> slices;
 
@@ -284,7 +273,7 @@ public class ClusterState implements MapWriter {
       // legacy format from 4.0... there was no separate "shards" level to contain the collection
       // shards.
       slices = Slice.loadAllFromMap(name, objs);
-      props = Collections.emptyMap();
+      props = Map.of();
     } else {
       slices = Slice.loadAllFromMap(name, sliceObjs);
       objs.remove(CollectionStateProps.SHARDS);
@@ -304,7 +293,7 @@ public class ClusterState implements MapWriter {
       router = DocRouter.getDocRouter((String) routerProps.get("name"));
     }
 
-    return DocCollection.create(name, slices, props, router, version, prsSupplier);
+    return DocCollection.create(name, slices, props, router, version, creationTime, prsSupplier);
   }
 
   @Override
@@ -328,63 +317,25 @@ public class ClusterState implements MapWriter {
   @Override
   public boolean equals(Object obj) {
     if (this == obj) return true;
-    if (!(obj instanceof ClusterState)) return false;
-    ClusterState other = (ClusterState) obj;
+    if (!(obj instanceof ClusterState other)) return false;
     if (liveNodes == null) {
       return other.liveNodes == null;
     } else return liveNodes.equals(other.liveNodes);
   }
 
-  /** Internal API used only by ZkStateReader */
+  /**
+   * @lucene.internal used only by ZkStateReader
+   */
   void setLiveNodes(Set<String> liveNodes) {
-    this.liveNodes = liveNodes;
+    this.liveNodes = Set.copyOf(liveNodes);
   }
 
   /**
-   * Be aware that this may return collections which may not exist now. You can confirm that this
-   * collection exists after verifying CollectionRef.get() != null
+   * Streams the resolved {@link DocCollection}s, which will often fetch from ZooKeeper for each one
+   * for a many-collection scenario. Use this sparingly; some users have thousands of collections!
    */
-  public Map<String, CollectionRef> getCollectionStates() {
-    return immutableCollectionStates;
-  }
-
-  /**
-   * Gets the set of allowed hosts (host:port) built from the set of live nodes. The set is cached
-   * to be reused.
-   */
-  public Set<String> getHostAllowList() {
-    if (hostAllowList == null) {
-      hostAllowList =
-          getLiveNodes().stream()
-              .map((liveNode) -> liveNode.substring(0, liveNode.indexOf('_')))
-              .collect(Collectors.toSet());
-    }
-    return hostAllowList;
-  }
-
-  /**
-   * Iterate over collections. Unlike {@link #getCollectionStates()} collections passed to the
-   * consumer are guaranteed to exist.
-   *
-   * @param consumer collection consumer.
-   */
-  public void forEachCollection(Consumer<DocCollection> consumer) {
-    collectionStates.forEach(
-        (s, collectionRef) -> {
-          try {
-            DocCollection collection = collectionRef.get();
-            if (collection != null) {
-              consumer.accept(collection);
-            }
-          } catch (SolrException e) {
-            if (e.getCause() != null
-                && e.getCause().getClass().getName().endsWith("NoNodeException")) {
-              // don't do anything. This collection does not exist
-            } else {
-              throw e;
-            }
-          }
-        });
+  public Stream<DocCollection> collectionStream() {
+    return collectionStates.values().stream().map(CollectionRef::get).filter(Objects::nonNull);
   }
 
   public static class CollectionRef {
@@ -400,7 +351,7 @@ public class ClusterState implements MapWriter {
     }
 
     /**
-     * Return the DocCollection, always refetching if lazy. Equivalent to get(false)
+     * Return the DocCollection, always re-fetching if lazy. Equivalent to get(false)
      *
      * @return The collection state modeled in zookeeper
      */
@@ -433,6 +384,7 @@ public class ClusterState implements MapWriter {
     }
   }
 
+  /** The approximate number of collections. */
   public int size() {
     return collectionStates.size();
   }
@@ -440,6 +392,9 @@ public class ClusterState implements MapWriter {
   private static volatile Function<JSONParser, ObjectBuilder> STR_INTERNER_OBJ_BUILDER =
       STANDARDOBJBUILDER;
 
+  /**
+   * @lucene.internal
+   */
   public static void setStrInternerParser(Function<JSONParser, ObjectBuilder> fun) {
     if (fun == null) return;
     STR_INTERNER_OBJ_BUILDER = fun;
