@@ -19,7 +19,6 @@ package org.apache.solr.common.cloud;
 import static org.apache.solr.common.util.Utils.toJSONString;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -43,11 +42,11 @@ public class ZkNodeProps implements MapWriter {
   }
 
   public ZkNodeProps(MapWriter mw) {
-    propMap = mw.toMap(new HashMap<>());
+    propMap = Utils.convertToMap(mw, new HashMap<>());
   }
 
   public ZkNodeProps plus(String key, Object val) {
-    return plus(Collections.singletonMap(key, val));
+    return plus(Map.of(key, val));
   }
 
   public ZkNodeProps plus(Map<String, Object> newVals) {
@@ -58,19 +57,11 @@ public class ZkNodeProps implements MapWriter {
   }
 
   /**
-   * Constructor that populates the from array of Strings in form key1, value1, key2, value2, ...,
+   * Constructor that populates from an array of Strings in form key1, value1, key2, value2, ...,
    * keyN, valueN
    */
   public ZkNodeProps(String... keyVals) {
     this(Utils.makeMap((Object[]) keyVals));
-  }
-
-  /**
-   * @deprecated use {@link ZkNodeProps#ZkNodeProps(String...)}
-   */
-  @Deprecated(since = "9.0.0")
-  public static ZkNodeProps fromKeyVals(Object... keyVals) {
-    return new ZkNodeProps(Utils.makeMap(keyVals));
   }
 
   /** Get property keys. */
