@@ -17,22 +17,20 @@
 package org.apache.solr.client.solrj.request;
 
 import static org.hamcrest.CoreMatchers.anyOf;
+import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 
-import java.io.File;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.SortedMap;
-import java.util.TreeMap;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.file.PathUtils;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
 import org.apache.solr.client.solrj.request.schema.AnalyzerDefinition;
 import org.apache.solr.client.solrj.request.schema.FieldTypeDefinition;
 import org.apache.solr.client.solrj.request.schema.SchemaRequest;
@@ -41,11 +39,7 @@ import org.apache.solr.client.solrj.response.schema.FieldTypeRepresentation;
 import org.apache.solr.client.solrj.response.schema.SchemaRepresentation;
 import org.apache.solr.client.solrj.response.schema.SchemaResponse;
 import org.apache.solr.common.SolrException;
-import org.apache.solr.common.util.NamedList;
-import org.apache.solr.common.util.SimpleOrderedMap;
 import org.apache.solr.util.RestTestBase;
-import org.eclipse.jetty.servlet.ServletHolder;
-import org.hamcrest.MatcherAssert;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -59,24 +53,13 @@ public class SchemaTest extends RestTestBase {
     assertEquals(
         "Response contained errors: " + schemaResponse.toString(), 0, schemaResponse.getStatus());
     assertNull(
-        "Response contained errors: " + schemaResponse.toString(),
-        schemaResponse.getResponse().get("errors"));
+        "Response contained errors: " + schemaResponse, schemaResponse.getResponse().get("errors"));
   }
 
   private static void assertFailedSchemaResponse(
       ThrowingRunnable runnable, String expectedErrorMessage) {
-    BaseHttpSolrClient.RemoteExecutionException e =
-        expectThrows(BaseHttpSolrClient.RemoteExecutionException.class, runnable);
-    SimpleOrderedMap<?> errorMap = (SimpleOrderedMap<?>) e.getMetaData().get("error");
-    assertEquals(
-        "org.apache.solr.api.ApiBag$ExceptionWithErrObject",
-        ((NamedList) errorMap.get("metadata")).get("error-class"));
-    List<?> details = (List<?>) errorMap.get("details");
-    assertTrue(
-        ((List<?>) ((Map<?, ?>) details.get(0)).get("errorMessages"))
-            .get(0)
-            .toString()
-            .contains(expectedErrorMessage));
+    final var e = expectThrows(RemoteSolrException.class, runnable);
+    assertThat(e.getMessage(), containsString(expectedErrorMessage));
   }
 
   private static void createStoredStringField(String fieldName, SolrClient solrClient)
@@ -111,31 +94,18 @@ public class SchemaTest extends RestTestBase {
 
   @Before
   public void init() throws Exception {
-    File tmpSolrHome = createTempDir().toFile();
-    FileUtils.copyDirectory(
-        new File(getFile("solrj/solr/collection1").getParent()), tmpSolrHome.getAbsoluteFile());
-
-    final SortedMap<ServletHolder, String> extraServlets = new TreeMap<>();
+    Path tmpSolrHome = createTempDir();
+    PathUtils.copyDirectory(getFile("solrj/solr/collection1").getParent(), tmpSolrHome);
 
     System.setProperty("managed.schema.mutable", "true");
-    System.setProperty("enable.update.log", "false");
+    System.setProperty("solr.index.updatelog.enabled", "false");
 
-    createJettyAndHarness(
-        tmpSolrHome.getAbsolutePath(),
-        "solrconfig-managed-schema.xml",
-        "schema.xml",
-        "/solr",
-        true,
-        extraServlets);
+    createJettyAndHarness(tmpSolrHome, "solrconfig-managed-schema.xml", "schema.xml");
   }
 
   @After
   public void cleanup() throws Exception {
-    solrClientTestRule.reset();
-    if (restTestHarness != null) {
-      restTestHarness.close();
-    }
-    restTestHarness = null;
+    solrTestRule.reset();
   }
 
   @Test
@@ -146,7 +116,7 @@ public class SchemaTest extends RestTestBase {
     SchemaRepresentation schemaRepresentation = schemaResponse.getSchemaRepresentation();
     assertNotNull(schemaRepresentation);
     assertEquals("test", schemaRepresentation.getName());
-    assertEquals(1.6, schemaRepresentation.getVersion(), 0.001f);
+    assertEquals(1.7, schemaRepresentation.getVersion(), 0.001f);
     assertEquals("id", schemaRepresentation.getUniqueKey());
     assertFalse(schemaRepresentation.getFields().isEmpty());
     assertFalse(schemaRepresentation.getDynamicFields().isEmpty());
@@ -169,7 +139,7 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.SchemaVersionResponse schemaVersionResponse =
         schemaVersionRequest.process(getSolrClient());
     assertValidSchemaResponse(schemaVersionResponse);
-    assertEquals(1.6, schemaVersionResponse.getSchemaVersion(), 0.001);
+    assertEquals(1.7, schemaVersionResponse.getSchemaVersion(), 0.001);
   }
 
   @Test
@@ -178,7 +148,7 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.FieldsResponse fieldsResponse = fieldsSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(fieldsResponse);
     List<Map<String, Object>> fields = fieldsResponse.getFields();
-    MatcherAssert.assertThat(fields.isEmpty(), is(false));
+    assertThat(fields.isEmpty(), is(false));
   }
 
   @Test
@@ -188,8 +158,8 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.FieldResponse fieldResponse = fieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(fieldResponse);
     Map<String, Object> fieldAttributes = fieldResponse.getField();
-    MatcherAssert.assertThat(fieldName, is(equalTo(fieldAttributes.get("name"))));
-    MatcherAssert.assertThat("string", is(equalTo(fieldAttributes.get("type"))));
+    assertThat(fieldName, is(equalTo(fieldAttributes.get("name"))));
+    assertThat("string", is(equalTo(fieldAttributes.get("type"))));
   }
 
   @Test
@@ -199,7 +169,7 @@ public class SchemaTest extends RestTestBase {
         dynamicFieldsSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(dynamicFieldsResponse);
     List<Map<String, Object>> fields = dynamicFieldsResponse.getDynamicFields();
-    MatcherAssert.assertThat(fields.isEmpty(), is(false));
+    assertThat(fields.isEmpty(), is(false));
   }
 
   @Test
@@ -211,8 +181,8 @@ public class SchemaTest extends RestTestBase {
         dynamicFieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(dynamicFieldResponse);
     Map<String, Object> dynamicFieldAttributes = dynamicFieldResponse.getDynamicField();
-    MatcherAssert.assertThat(dynamicFieldName, is(equalTo(dynamicFieldAttributes.get("name"))));
-    MatcherAssert.assertThat("int", is(equalTo(dynamicFieldAttributes.get("type"))));
+    assertThat(dynamicFieldName, is(equalTo(dynamicFieldAttributes.get("name"))));
+    assertThat("int", is(equalTo(dynamicFieldAttributes.get("type"))));
   }
 
   @Test
@@ -222,7 +192,7 @@ public class SchemaTest extends RestTestBase {
         fieldTypesRequest.process(getSolrClient());
     assertValidSchemaResponse(fieldTypesResponse);
     List<FieldTypeRepresentation> fieldTypes = fieldTypesResponse.getFieldTypes();
-    MatcherAssert.assertThat(fieldTypes.isEmpty(), is(false));
+    assertThat(fieldTypes.isEmpty(), is(false));
   }
 
   @Test
@@ -233,10 +203,8 @@ public class SchemaTest extends RestTestBase {
         fieldTypeSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(fieldTypeResponse);
     FieldTypeRepresentation fieldTypeDefinition = fieldTypeResponse.getFieldType();
-    MatcherAssert.assertThat(
-        fieldType, is(equalTo(fieldTypeDefinition.getAttributes().get("name"))));
-    MatcherAssert.assertThat(
-        "solr.StrField", is(equalTo(fieldTypeDefinition.getAttributes().get("class"))));
+    assertThat(fieldType, is(equalTo(fieldTypeDefinition.getAttributes().get("name"))));
+    assertThat("solr.StrField", is(equalTo(fieldTypeDefinition.getAttributes().get("class"))));
   }
 
   @Test
@@ -246,7 +214,7 @@ public class SchemaTest extends RestTestBase {
         copyFieldsRequest.process(getSolrClient());
     assertValidSchemaResponse(copyFieldsResponse);
     List<Map<String, Object>> copyFieldsAttributes = copyFieldsResponse.getCopyFields();
-    MatcherAssert.assertThat(copyFieldsAttributes.isEmpty(), is(false));
+    assertThat(copyFieldsAttributes.isEmpty(), is(false));
   }
 
   @Test
@@ -300,12 +268,12 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.FieldResponse newFieldResponse = fieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldResponse);
     Map<String, Object> newFieldAttributes = newFieldResponse.getField();
-    MatcherAssert.assertThat(fieldName, is(equalTo(newFieldAttributes.get("name"))));
-    MatcherAssert.assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
-    MatcherAssert.assertThat(false, is(equalTo(newFieldAttributes.get("stored"))));
-    MatcherAssert.assertThat(true, is(equalTo(newFieldAttributes.get("indexed"))));
-    MatcherAssert.assertThat("accuracy", is(equalTo(newFieldAttributes.get("default"))));
-    MatcherAssert.assertThat(true, is(equalTo(newFieldAttributes.get("required"))));
+    assertThat(fieldName, is(equalTo(newFieldAttributes.get("name"))));
+    assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
+    assertThat(false, is(equalTo(newFieldAttributes.get("stored"))));
+    assertThat(true, is(equalTo(newFieldAttributes.get("indexed"))));
+    assertThat("accuracy", is(equalTo(newFieldAttributes.get("default"))));
+    assertThat(true, is(equalTo(newFieldAttributes.get("required"))));
   }
 
   @Test
@@ -341,7 +309,7 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.FieldResponse initialFieldResponse = fieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(initialFieldResponse);
     Map<String, Object> fieldAttributesResponse = initialFieldResponse.getField();
-    MatcherAssert.assertThat(fieldName, is(equalTo(fieldAttributesResponse.get("name"))));
+    assertThat(fieldName, is(equalTo(fieldAttributesResponse.get("name"))));
 
     SchemaRequest.DeleteField deleteFieldRequest = new SchemaRequest.DeleteField(fieldName);
     SchemaResponse.UpdateResponse deleteFieldResponse = deleteFieldRequest.process(getSolrClient());
@@ -389,11 +357,11 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.FieldResponse newFieldResponse = fieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldResponse);
     Map<String, Object> newFieldAttributes = newFieldResponse.getField();
-    MatcherAssert.assertThat(fieldName, is(equalTo(newFieldAttributes.get("name"))));
-    MatcherAssert.assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
-    MatcherAssert.assertThat(true, is(equalTo(newFieldAttributes.get("stored"))));
-    MatcherAssert.assertThat(false, is(equalTo(newFieldAttributes.get("indexed"))));
-    MatcherAssert.assertThat(true, is(equalTo(newFieldAttributes.get("required"))));
+    assertThat(fieldName, is(equalTo(newFieldAttributes.get("name"))));
+    assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
+    assertThat(true, is(equalTo(newFieldAttributes.get("stored"))));
+    assertThat(false, is(equalTo(newFieldAttributes.get("indexed"))));
+    assertThat(true, is(equalTo(newFieldAttributes.get("required"))));
   }
 
   @Test
@@ -427,10 +395,10 @@ public class SchemaTest extends RestTestBase {
     SchemaResponse.DynamicFieldResponse newFieldResponse = dFieldRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldResponse);
     Map<String, Object> newFieldAttributes = newFieldResponse.getDynamicField();
-    MatcherAssert.assertThat(dFieldName, is(equalTo(newFieldAttributes.get("name"))));
-    MatcherAssert.assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
-    MatcherAssert.assertThat(false, is(equalTo(newFieldAttributes.get("stored"))));
-    MatcherAssert.assertThat(true, is(equalTo(newFieldAttributes.get("indexed"))));
+    assertThat(dFieldName, is(equalTo(newFieldAttributes.get("name"))));
+    assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
+    assertThat(false, is(equalTo(newFieldAttributes.get("stored"))));
+    assertThat(true, is(equalTo(newFieldAttributes.get("indexed"))));
   }
 
   @Test
@@ -469,7 +437,7 @@ public class SchemaTest extends RestTestBase {
         dynamicFieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(initialDFieldResponse);
     Map<String, Object> fieldAttributesResponse = initialDFieldResponse.getDynamicField();
-    MatcherAssert.assertThat(dynamicFieldName, is(equalTo(fieldAttributesResponse.get("name"))));
+    assertThat(dynamicFieldName, is(equalTo(fieldAttributesResponse.get("name"))));
 
     SchemaRequest.DeleteDynamicField deleteFieldRequest =
         new SchemaRequest.DeleteDynamicField(dynamicFieldName);
@@ -481,7 +449,7 @@ public class SchemaTest extends RestTestBase {
   }
 
   @Test
-  public void deletingADynamicFieldThatDoesntExistInTheSchemaShouldFail() throws Exception {
+  public void deletingADynamicFieldThatDoesntExistInTheSchemaShouldFail() {
     String dynamicFieldName = "*_notexists";
     SchemaRequest.DeleteDynamicField deleteDynamicFieldRequest =
         new SchemaRequest.DeleteDynamicField(dynamicFieldName);
@@ -524,10 +492,10 @@ public class SchemaTest extends RestTestBase {
         dynamicFieldSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldResponse);
     Map<String, Object> newFieldAttributes = newFieldResponse.getDynamicField();
-    MatcherAssert.assertThat(fieldName, is(equalTo(newFieldAttributes.get("name"))));
-    MatcherAssert.assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
-    MatcherAssert.assertThat(true, is(equalTo(newFieldAttributes.get("stored"))));
-    MatcherAssert.assertThat(false, is(equalTo(newFieldAttributes.get("indexed"))));
+    assertThat(fieldName, is(equalTo(newFieldAttributes.get("name"))));
+    assertThat("string", is(equalTo(newFieldAttributes.get("type"))));
+    assertThat(true, is(equalTo(newFieldAttributes.get("stored"))));
+    assertThat(false, is(equalTo(newFieldAttributes.get("indexed"))));
   }
 
   @Test
@@ -551,14 +519,14 @@ public class SchemaTest extends RestTestBase {
     charFilterAttributes.put("class", "solr.PatternReplaceCharFilterFactory");
     charFilterAttributes.put("replacement", "$1$1");
     charFilterAttributes.put("pattern", "([a-zA-Z])\\\\1+");
-    analyzerDefinition.setCharFilters(Collections.singletonList(charFilterAttributes));
+    analyzerDefinition.setCharFilters(List.of(charFilterAttributes));
     Map<String, Object> tokenizerAttributes = new LinkedHashMap<>();
     tokenizerAttributes.put("class", "solr.WhitespaceTokenizerFactory");
     analyzerDefinition.setTokenizer(tokenizerAttributes);
     Map<String, Object> filterAttributes = new LinkedHashMap<>();
     filterAttributes.put("class", "solr.WordDelimiterGraphFilterFactory");
     filterAttributes.put("preserveOriginal", "0");
-    analyzerDefinition.setFilters(Collections.singletonList(filterAttributes));
+    analyzerDefinition.setFilters(List.of(filterAttributes));
     fieldTypeDefinition.setAnalyzer(analyzerDefinition);
 
     SchemaRequest.AddFieldType addFieldTypeRequest =
@@ -596,11 +564,10 @@ public class SchemaTest extends RestTestBase {
         fieldTypeRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldTypeResponse);
     FieldTypeRepresentation newFieldTypeRepresentation = newFieldTypeResponse.getFieldType();
-    MatcherAssert.assertThat(
-        fieldTypeName, is(equalTo(newFieldTypeRepresentation.getAttributes().get("name"))));
-    MatcherAssert.assertThat(
+    assertThat(fieldTypeName, is(equalTo(newFieldTypeRepresentation.getAttributes().get("name"))));
+    assertThat(
         "solr.TextField", is(equalTo(newFieldTypeRepresentation.getAttributes().get("class"))));
-    MatcherAssert.assertThat(
+    assertThat(
         analyzerDefinition.getTokenizer().get("class"),
         is(equalTo(newFieldTypeRepresentation.getAnalyzer().getTokenizer().get("class"))));
   }
@@ -619,7 +586,7 @@ public class SchemaTest extends RestTestBase {
     charFilterAttributes.put("class", "solr.PatternReplaceCharFilterFactory");
     charFilterAttributes.put("replacement", "$1$1");
     charFilterAttributes.put("pattern", "([a-zA-Z])\\\\1+");
-    analyzerDefinition.setCharFilters(Collections.singletonList(charFilterAttributes));
+    analyzerDefinition.setCharFilters(List.of(charFilterAttributes));
     Map<String, Object> tokenizerAttributes = new LinkedHashMap<>();
     tokenizerAttributes.put("class", "solr.WhitespaceTokenizerFactory");
     analyzerDefinition.setTokenizer(tokenizerAttributes);
@@ -640,9 +607,8 @@ public class SchemaTest extends RestTestBase {
         fieldTypeRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldTypeResponse);
     FieldTypeRepresentation newFieldTypeRepresentation = newFieldTypeResponse.getFieldType();
-    MatcherAssert.assertThat(
-        fieldTypeName, is(equalTo(newFieldTypeRepresentation.getAttributes().get("name"))));
-    MatcherAssert.assertThat(
+    assertThat(fieldTypeName, is(equalTo(newFieldTypeRepresentation.getAttributes().get("name"))));
+    assertThat(
         similarityAttributes.get("class"),
         is(equalTo(newFieldTypeRepresentation.getSimilarity().get("class"))));
   }
@@ -674,9 +640,8 @@ public class SchemaTest extends RestTestBase {
         fieldTypeRequest.process(getSolrClient());
     assertValidSchemaResponse(newFieldTypeResponse);
     FieldTypeRepresentation newFieldTypeRepresentation = newFieldTypeResponse.getFieldType();
-    MatcherAssert.assertThat(
-        fieldTypeName, is(equalTo(newFieldTypeRepresentation.getAttributes().get("name"))));
-    MatcherAssert.assertThat(
+    assertThat(fieldTypeName, is(equalTo(newFieldTypeRepresentation.getAttributes().get("name"))));
+    assertThat(
         analyzerAttributes.get("class"),
         is(equalTo(newFieldTypeRepresentation.getAnalyzer().getAttributes().get("class"))));
   }
@@ -724,7 +689,7 @@ public class SchemaTest extends RestTestBase {
     assertValidSchemaResponse(initialFieldTypeResponse);
     FieldTypeRepresentation responseFieldTypeRepresentation =
         initialFieldTypeResponse.getFieldType();
-    MatcherAssert.assertThat(
+    assertThat(
         fieldTypeName, is(equalTo(responseFieldTypeRepresentation.getAttributes().get("name"))));
 
     SchemaRequest.DeleteFieldType deleteFieldTypeRequest =
@@ -746,7 +711,7 @@ public class SchemaTest extends RestTestBase {
   }
 
   @Test
-  public void deletingAFieldTypeThatDoesntExistInTheSchemaShouldFail() throws Exception {
+  public void deletingAFieldTypeThatDoesntExistInTheSchemaShouldFail() {
     String fieldType = "fieldTypeToBeDeleted";
     SchemaRequest.DeleteFieldType deleteFieldTypeRequest =
         new SchemaRequest.DeleteFieldType(fieldType);
@@ -797,15 +762,14 @@ public class SchemaTest extends RestTestBase {
     FieldTypeRepresentation replacedFieldTypeRepresentation = newFieldTypeResponse.getFieldType();
     Map<String, Object> replacedFieldTypeAttributes =
         replacedFieldTypeRepresentation.getAttributes();
-    MatcherAssert.assertThat(fieldTypeName, is(equalTo(replacedFieldTypeAttributes.get("name"))));
-    MatcherAssert.assertThat(
+    assertThat(fieldTypeName, is(equalTo(replacedFieldTypeAttributes.get("name"))));
+    assertThat(
         RANDOMIZED_NUMERIC_FIELDTYPES.get(Integer.class),
         is(equalTo(replacedFieldTypeAttributes.get("class"))));
-    MatcherAssert.assertThat(false, is(equalTo(replacedFieldTypeAttributes.get("omitNorms"))));
-    MatcherAssert.assertThat(
-        "42", is(equalTo(replacedFieldTypeAttributes.get("positionIncrementGap"))));
+    assertThat(false, is(equalTo(replacedFieldTypeAttributes.get("omitNorms"))));
+    assertThat("42", is(equalTo(replacedFieldTypeAttributes.get("positionIncrementGap"))));
     // should be unchanged...
-    MatcherAssert.assertThat(useDv, is(equalTo(replacedFieldTypeAttributes.get("docValues"))));
+    assertThat(useDv, is(equalTo(replacedFieldTypeAttributes.get("docValues"))));
   }
 
   @Test
@@ -864,7 +828,7 @@ public class SchemaTest extends RestTestBase {
       if (srcFieldName.equals(currentCopyField.get("source"))) {
         String currentDestFieldName = (String) currentCopyField.get("dest");
         int currentMaxChars = (Integer) currentCopyField.get("maxChars");
-        MatcherAssert.assertThat(
+        assertThat(
             currentDestFieldName, anyOf(is(equalTo(destFieldName1)), is(equalTo(destFieldName2))));
         assertEquals(maxChars, currentMaxChars);
       }
@@ -872,7 +836,7 @@ public class SchemaTest extends RestTestBase {
   }
 
   @Test
-  public void copyFieldsShouldFailWhenOneOfTheFieldsDoesntExistInTheSchema() throws Exception {
+  public void copyFieldsShouldFailWhenOneOfTheFieldsDoesntExistInTheSchema() {
     String srcFieldName = "srcnotexist";
     String destFieldName1 = "destNotExist1", destFieldName2 = "destNotExist2";
 
@@ -910,7 +874,7 @@ public class SchemaTest extends RestTestBase {
   }
 
   @Test
-  public void deleteCopyFieldShouldFailWhenOneOfTheFieldsDoesntExistInTheSchema() throws Exception {
+  public void deleteCopyFieldShouldFailWhenOneOfTheFieldsDoesntExistInTheSchema() {
     String srcFieldName = "copyfield";
     String destFieldName1 = "destField1", destFieldName2 = "destField2";
     SchemaRequest.DeleteCopyField deleteCopyFieldsRequest =
@@ -951,25 +915,24 @@ public class SchemaTest extends RestTestBase {
         fieldTypeSchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(fieldTypeResponse);
     FieldTypeRepresentation fieldTypeRepresentation = fieldTypeResponse.getFieldType();
-    MatcherAssert.assertThat(
-        fieldTypeName, is(equalTo(fieldTypeRepresentation.getAttributes().get("name"))));
+    assertThat(fieldTypeName, is(equalTo(fieldTypeRepresentation.getAttributes().get("name"))));
 
     SchemaRequest.Field field1SchemaRequest = new SchemaRequest.Field(field1Name);
     SchemaResponse.FieldResponse field1Response = field1SchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(field1Response);
     Map<String, ?> field1Attributes = field1Response.getField();
-    MatcherAssert.assertThat(field1Name, is(equalTo(field1Attributes.get("name"))));
-    MatcherAssert.assertThat(fieldTypeName, is(equalTo(field1Attributes.get("type"))));
-    MatcherAssert.assertThat(true, is(equalTo(field1Attributes.get("stored"))));
-    MatcherAssert.assertThat(true, is(equalTo(field1Attributes.get("indexed"))));
+    assertThat(field1Name, is(equalTo(field1Attributes.get("name"))));
+    assertThat(fieldTypeName, is(equalTo(field1Attributes.get("type"))));
+    assertThat(true, is(equalTo(field1Attributes.get("stored"))));
+    assertThat(true, is(equalTo(field1Attributes.get("indexed"))));
 
     SchemaRequest.Field field2SchemaRequest = new SchemaRequest.Field(field1Name);
     SchemaResponse.FieldResponse field2Response = field2SchemaRequest.process(getSolrClient());
     assertValidSchemaResponse(field2Response);
     Map<String, ?> field2Attributes = field2Response.getField();
-    MatcherAssert.assertThat(field1Name, is(equalTo(field2Attributes.get("name"))));
-    MatcherAssert.assertThat(fieldTypeName, is(equalTo(field2Attributes.get("type"))));
-    MatcherAssert.assertThat(true, is(equalTo(field2Attributes.get("stored"))));
-    MatcherAssert.assertThat(true, is(equalTo(field2Attributes.get("indexed"))));
+    assertThat(field1Name, is(equalTo(field2Attributes.get("name"))));
+    assertThat(fieldTypeName, is(equalTo(field2Attributes.get("type"))));
+    assertThat(true, is(equalTo(field2Attributes.get("stored"))));
+    assertThat(true, is(equalTo(field2Attributes.get("indexed"))));
   }
 }
